--- a/service.html
+++ b/service.html
@@ -110,6 +110,9 @@
 <!-- BUILD:END -->
 
 
+<!-- FAQ_BLOCK -->
+
+
 <!-- Rating Modal -->
 <div id="rating-modal" class="rating-modal">
   <div class="rating-content">
