--- a/services/anchorwatch.html
+++ b/services/anchorwatch.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"AnchorWatch — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/anchorwatch.html","description":"AnchorWatch is a U.S.-based bitcoin custody and insurance provider trying to bridge traditional insurance with Bitcoin-native custody, delivering peace of mind…","about":{"@type":"Organization","name":"AnchorWatch","url":"https://anchorwatch.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/anchorwatch.html#webpage","name":"AnchorWatch — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/anchorwatch.html","inLanguage":"en","description":"AnchorWatch is a U.S.-based bitcoin custody and insurance provider trying to bridge traditional insurance with Bitcoin-native custody, delivering peace of mind…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/anchorwatch.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/anchorwatch.html#service","name":"AnchorWatch","url":"https://anchorwatch.com","mainEntityOfPage":"https://buoybitcoin.com/services/anchorwatch.html#webpage","provider":{"@type":"Organization","name":"AnchorWatch","url":"https://anchorwatch.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Store it safely","item":"https://buoybitcoin.com/store-it-safely.html"},{"@type":"ListItem","position":3,"name":"AnchorWatch","item":"https://buoybitcoin.com/services/anchorwatch.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -271,9 +272,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">AnchorWatch is a U.S.-based bitcoin custody and insurance provider trying to bridge traditional insurance with Bitcoin-native custody, delivering peace of mind by offering an elegant, turnkey solution...</p>
-        <p class="desktop-preview">AnchorWatch is a U.S.-based bitcoin custody and insurance provider trying to bridge traditional insurance with Bitcoin-native custody, delivering peace of mind by offering an elegant, turnkey solution for long‑term bitcoin holders and corporate treasuries seeking secure, insured, and inheritance‑ready custody.\n\nWhat separates AnchorWatch is their unique integration of protocol-level multisig vaults with time-locked recovery and insurance. Users hold a multi-signature key set alongside AnchorWatch; both are required to sign transactions, and over time additional recovery mechanisms activate to handle key-loss, death, or coercion scenarios.\n\nUser reviews and discussions (e.g. from the Build With Bitcoin transcript) emphasize AnchorWatch’s layered approach: the combination of vault tech and insurance addresses both technical and human vulnerabilities. The service also supports inheritance planning—time-locked access for heirs without cumbersome “treasure maps”. This focus on estate continuity is cited as a major differentiator, especially for non‑technical beneficiaries.\n\nTheir future vision includes expanding beyond U.S. customers, offering bespoke large-value enterprise policies, and exploring Bitcoin-denominated insurance.</p>
+        <p class="desktop-preview">AnchorWatch is a U.S.-based bitcoin custody and insurance provider trying to bridge traditional insurance with Bitcoin-native custody, delivering peace of mind by offering an elegant, turnkey solution for long‑term bitcoin holders and corporate treasuries seeking secure, insured, and inheritance‑ready custody.</p>
       </div>
-      <div class="description-full" style="display:none"><p>AnchorWatch is a U.S.-based bitcoin custody and insurance provider trying to bridge traditional insurance with Bitcoin-native custody, delivering peace of mind by offering an elegant, turnkey solution for long‑term bitcoin holders and corporate treasuries seeking secure, insured, and inheritance‑ready custody.\n\nWhat separates AnchorWatch is their unique integration of protocol-level multisig vaults with time-locked recovery and insurance. Users hold a multi-signature key set alongside AnchorWatch; both are required to sign transactions, and over time additional recovery mechanisms activate to handle key-loss, death, or coercion scenarios.\n\nUser reviews and discussions (e.g. from the Build With Bitcoin transcript) emphasize AnchorWatch’s layered approach: the combination of vault tech and insurance addresses both technical and human vulnerabilities. The service also supports inheritance planning—time-locked access for heirs without cumbersome “treasure maps”. This focus on estate continuity is cited as a major differentiator, especially for non‑technical beneficiaries.\n\nTheir future vision includes expanding beyond U.S. customers, offering bespoke large-value enterprise policies, and exploring Bitcoin-denominated insurance.</p></div>
+      <div class="description-full" style="display:none"><p>AnchorWatch is a U.S.-based bitcoin custody and insurance provider trying to bridge traditional insurance with Bitcoin-native custody, delivering peace of mind by offering an elegant, turnkey solution for long‑term bitcoin holders and corporate treasuries seeking secure, insured, and inheritance‑ready custody.</p><p>What separates AnchorWatch is their unique integration of protocol-level multisig vaults with time-locked recovery and insurance. Users hold a multi-signature key set alongside AnchorWatch; both are required to sign transactions, and over time additional recovery mechanisms activate to handle key-loss, death, or coercion scenarios.</p><p>User reviews and discussions (e.g. from the Build With Bitcoin transcript) emphasize AnchorWatch&#039;s layered approach: the combination of vault tech and insurance addresses both technical and human vulnerabilities. The service also supports inheritance planning—time-locked access for heirs without cumbersome &quot;treasure maps&quot;. This focus on estate continuity is cited as a major differentiator, especially for non‑technical beneficiaries.</p><p>Their future vision includes expanding beyond U.S. customers, offering bespoke large-value enterprise policies, and exploring Bitcoin-denominated insurance.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -319,6 +320,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is AnchorWatch?</summary>
+  <div><p>AnchorWatch provides insured, collaborative custody with multisig vaults designed for long‑term bitcoin storage and inheritance.</p></div>
+</details>
+
+<details>
+  <summary>Is AnchorWatch insured?</summary>
+  <div><p>Yes. Policies are designed to cover bitcoin in AnchorWatch vaults with 1:1 insurance.</p></div>
+</details>
+
+<details>
+  <summary>Does AnchorWatch require KYC?</summary>
+  <div><p>Yes. As a regulated provider AnchorWatch requires identity verification.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is AnchorWatch?","acceptedAnswer":{"@type":"Answer","text":"AnchorWatch provides insured, collaborative custody with multisig vaults designed for long‑term bitcoin storage and inheritance."}},{"@type":"Question","name":"Is AnchorWatch insured?","acceptedAnswer":{"@type":"Answer","text":"Yes. Policies are designed to cover bitcoin in AnchorWatch vaults with 1:1 insurance."}},{"@type":"Question","name":"Does AnchorWatch require KYC?","acceptedAnswer":{"@type":"Answer","text":"Yes. As a regulated provider AnchorWatch requires identity verification."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -377,7 +400,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to AnchorWatch","itemListElement":[{"@type":"Service","name":"Bitkey","url":"/services/bitkey.html","position":1},{"@type":"Service","name":"Sparrow","url":"/services/sparrow.html","position":2},{"@type":"Service","name":"Unchained","url":"/services/unchained.html","position":3},{"@type":"Service","name":"Wasabi","url":"/services/wasabi.html","position":4}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to AnchorWatch","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bitkey.html#service","name":"Bitkey","url":"https://buoybitcoin.com/services/bitkey.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/sparrow.html#service","name":"Sparrow","url":"https://buoybitcoin.com/services/sparrow.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/unchained.html#service","name":"Unchained","url":"https://buoybitcoin.com/services/unchained.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/wasabi.html#service","name":"Wasabi","url":"https://buoybitcoin.com/services/wasabi.html"}}]}</script>
 <script>
 (function(){
   try {
