--- a/services/aqua.html
+++ b/services/aqua.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Aqua — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/aqua.html","description":"Aqua Wallet, originally launched by Blockstream, later taken over by Jan3, is a mobile app designed for easy saving and spending in Bitcoin. It's a non-custodi…","about":{"@type":"Organization","name":"Aqua","url":"https://aqua.net"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/aqua.html#webpage","name":"Aqua — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/aqua.html","inLanguage":"en","description":"Aqua Wallet, originally launched by Blockstream, later taken over by Jan3, is a mobile app designed for easy saving and spending in Bitcoin. It's a non-custodi…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/aqua.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/aqua.html#service","name":"Aqua","url":"https://aqua.net","mainEntityOfPage":"https://buoybitcoin.com/services/aqua.html#webpage","provider":{"@type":"Organization","name":"Aqua","url":"https://aqua.net"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Aqua","item":"https://buoybitcoin.com/services/aqua.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -261,9 +262,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Aqua Wallet, originally launched by Blockstream, later taken over by Jan3, is a mobile app designed for easy saving and spending in Bitcoin. It&#039;s a non-custodial, open-source wallet using a 12-word se...</p>
-        <p class="desktop-preview">Aqua Wallet, originally launched by Blockstream, later taken over by Jan3, is a mobile app designed for easy saving and spending in Bitcoin. It&#039;s a non-custodial, open-source wallet using a 12-word seed phrase for user control, and a unified balance across on-chain Bitcoin, Lightning, and Liquid Network transactions, defaulting to Liquid for low-fee, private payments. It offers sending, receiving, and swapping Bitcoin (on-chain to Liquid or vice versa) but for Lightning payments they rely on Boltz, a third party which can occur higher swap fees.\n\nThe app has an intuitive interface - although the design could use some work - and offers seamless swaps between on-chain Bitcoin and Lightning or Liquid.\n\nJAN3’s mission is to onboard billions to Bitcoin, with a vision to expand Aqua with debit card integration, credit/loans, and global on/off-ramps. Beginners love its simple setup and versatility, but some find stablecoin options and swap fees confusing.</p>
+        <p class="desktop-preview">Aqua Wallet, originally launched by Blockstream, later taken over by Jan3, is a mobile app designed for easy saving and spending in Bitcoin. It&#039;s a non-custodial, open-source wallet using a 12-word seed phrase for user control, and a unified balance across on-chain Bitcoin, Lightning, and Liquid Network transactions, defaulting to Liquid for low-fee, private payments. It offers sending, receiving, and swapping Bitcoin (on-chain to Liquid or vice versa) but for Lightning payments they rely on Boltz, a third party which can occur higher swap fees.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Aqua Wallet, originally launched by Blockstream, later taken over by Jan3, is a mobile app designed for easy saving and spending in Bitcoin. It&#039;s a non-custodial, open-source wallet using a 12-word seed phrase for user control, and a unified balance across on-chain Bitcoin, Lightning, and Liquid Network transactions, defaulting to Liquid for low-fee, private payments. It offers sending, receiving, and swapping Bitcoin (on-chain to Liquid or vice versa) but for Lightning payments they rely on Boltz, a third party which can occur higher swap fees.\n\nThe app has an intuitive interface - although the design could use some work - and offers seamless swaps between on-chain Bitcoin and Lightning or Liquid.\n\nJAN3’s mission is to onboard billions to Bitcoin, with a vision to expand Aqua with debit card integration, credit/loans, and global on/off-ramps. Beginners love its simple setup and versatility, but some find stablecoin options and swap fees confusing.</p></div>
+      <div class="description-full" style="display:none"><p>Aqua Wallet, originally launched by Blockstream, later taken over by Jan3, is a mobile app designed for easy saving and spending in Bitcoin. It&#039;s a non-custodial, open-source wallet using a 12-word seed phrase for user control, and a unified balance across on-chain Bitcoin, Lightning, and Liquid Network transactions, defaulting to Liquid for low-fee, private payments. It offers sending, receiving, and swapping Bitcoin (on-chain to Liquid or vice versa) but for Lightning payments they rely on Boltz, a third party which can occur higher swap fees.</p><p>The app has an intuitive interface - although the design could use some work - and offers seamless swaps between on-chain Bitcoin and Lightning or Liquid.</p><p>JAN3&#039;s mission is to onboard billions to Bitcoin, with a vision to expand Aqua with debit card integration, credit/loans, and global on/off-ramps. Beginners love its simple setup and versatility, but some find stablecoin options and swap fees confusing.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -309,6 +310,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Aqua Wallet?</summary>
+  <div><p>Aqua is a non‑custodial mobile wallet supporting Bitcoin, Lightning and Liquid in one interface for easy saving and spending.</p></div>
+</details>
+
+<details>
+  <summary>Does Aqua require KYC?</summary>
+  <div><p>No. Aqua is a self‑custodial wallet and does not require KYC to use the app.</p></div>
+</details>
+
+<details>
+  <summary>Is Aqua open source?</summary>
+  <div><p>Yes. Aqua is open‑source and welcomes community review and contributions.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Aqua Wallet?","acceptedAnswer":{"@type":"Answer","text":"Aqua is a non‑custodial mobile wallet supporting Bitcoin, Lightning and Liquid in one interface for easy saving and spending."}},{"@type":"Question","name":"Does Aqua require KYC?","acceptedAnswer":{"@type":"Answer","text":"No. Aqua is a self‑custodial wallet and does not require KYC to use the app."}},{"@type":"Question","name":"Is Aqua open source?","acceptedAnswer":{"@type":"Answer","text":"Yes. Aqua is open‑source and welcomes community review and contributions."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -367,7 +390,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Aqua","itemListElement":[{"@type":"Service","name":"Breez","url":"/services/breez.html","position":1},{"@type":"Service","name":"Fold","url":"/services/fold.html","position":2},{"@type":"Service","name":"Muun","url":"/services/muun.html","position":3},{"@type":"Service","name":"Phoenix","url":"/services/phoenix.html","position":4}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Aqua","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/breez.html#service","name":"Breez","url":"https://buoybitcoin.com/services/breez.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/fold.html#service","name":"Fold","url":"https://buoybitcoin.com/services/fold.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/muun.html#service","name":"Muun","url":"https://buoybitcoin.com/services/muun.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://buoybitcoin.com/services/phoenix.html"}}]}</script>
 <script>
 (function(){
   try {
