--- a/services/breez.html
+++ b/services/breez.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Breez — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/breez.html","description":"Breez (Misty Breez) focuses on making Lightning Network payments fast and easy. It stands out with its non-custodial mobile app, letting users control their Bi…","about":{"@type":"Organization","name":"Breez","url":"https://breez.technology"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/breez.html#webpage","name":"Breez — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/breez.html","inLanguage":"en","description":"Breez (Misty Breez) focuses on making Lightning Network payments fast and easy. It stands out with its non-custodial mobile app, letting users control their Bi…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/breez.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/breez.html#service","name":"Breez","url":"https://breez.technology","mainEntityOfPage":"https://buoybitcoin.com/services/breez.html#webpage","provider":{"@type":"Organization","name":"Breez","url":"https://breez.technology"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Breez","item":"https://buoybitcoin.com/services/breez.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -261,9 +262,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Breez (Misty Breez) focuses on making Lightning Network payments fast and easy. It stands out with its non-custodial mobile app, letting users control their Bitcoin, and a unique Point-of-Sale mode fo...</p>
-        <p class="desktop-preview">Breez (Misty Breez) focuses on making Lightning Network payments fast and easy. It stands out with its non-custodial mobile app, letting users control their Bitcoin, and a unique Point-of-Sale mode for merchants to accept instant payments. It offers sending, receiving, and storing Bitcoin via Lightning, plus a podcast player to support creators with Bitcoin tips.\n\nThe app has a simple interface and no-setup payments, though some users report issues with cloud backups and wallet restoration.\n\nBreez’s mission is to drive Bitcoin adoption for everyday use, with a vision to expand Lightning payments across apps using its Breez SDK, a free developer tool. The app currently suits everyday payments rather than very small transactions. Beginners love its ease and merchant tools, but some find technical issues frustrating.</p>
+        <p class="desktop-preview">Breez (Misty Breez) focuses on making Lightning Network payments fast and easy. It stands out with its non-custodial mobile app, letting users control their Bitcoin, and a unique Point-of-Sale mode for merchants to accept instant payments. It offers sending, receiving, and storing Bitcoin via Lightning, plus a podcast player to support creators with Bitcoin tips.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Breez (Misty Breez) focuses on making Lightning Network payments fast and easy. It stands out with its non-custodial mobile app, letting users control their Bitcoin, and a unique Point-of-Sale mode for merchants to accept instant payments. It offers sending, receiving, and storing Bitcoin via Lightning, plus a podcast player to support creators with Bitcoin tips.\n\nThe app has a simple interface and no-setup payments, though some users report issues with cloud backups and wallet restoration.\n\nBreez’s mission is to drive Bitcoin adoption for everyday use, with a vision to expand Lightning payments across apps using its Breez SDK, a free developer tool. The app currently suits everyday payments rather than very small transactions. Beginners love its ease and merchant tools, but some find technical issues frustrating.</p></div>
+      <div class="description-full" style="display:none"><p>Breez (Misty Breez) focuses on making Lightning Network payments fast and easy. It stands out with its non-custodial mobile app, letting users control their Bitcoin, and a unique Point-of-Sale mode for merchants to accept instant payments. It offers sending, receiving, and storing Bitcoin via Lightning, plus a podcast player to support creators with Bitcoin tips.</p><p>The app has a simple interface and no-setup payments, though some users report issues with cloud backups and wallet restoration.</p><p>Breez&#039;s mission is to drive Bitcoin adoption for everyday use, with a vision to expand Lightning payments across apps using its Breez SDK, a free developer tool. The app currently suits everyday payments rather than very small transactions. Beginners love its ease and merchant tools, but some find technical issues frustrating.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -309,6 +310,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Breez Wallet?</summary>
+  <div><p>Breez is a non‑custodial Lightning wallet with PoS mode and a podcast player for streaming sats to creators.</p></div>
+</details>
+
+<details>
+  <summary>Does Breez require cloud backup?</summary>
+  <div><p>Yes. Breez uses a cloud backup to restore your wallet and Lightning channels, which some users prefer for convenience.</p></div>
+</details>
+
+<details>
+  <summary>Is Breez open source?</summary>
+  <div><p>Yes. Breez is open‑source and actively developed with the community.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Breez Wallet?","acceptedAnswer":{"@type":"Answer","text":"Breez is a non‑custodial Lightning wallet with PoS mode and a podcast player for streaming sats to creators."}},{"@type":"Question","name":"Does Breez require cloud backup?","acceptedAnswer":{"@type":"Answer","text":"Yes. Breez uses a cloud backup to restore your wallet and Lightning channels, which some users prefer for convenience."}},{"@type":"Question","name":"Is Breez open source?","acceptedAnswer":{"@type":"Answer","text":"Yes. Breez is open‑source and actively developed with the community."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -367,7 +390,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Breez","itemListElement":[{"@type":"Service","name":"Aqua","url":"/services/aqua.html","position":1},{"@type":"Service","name":"Fold","url":"/services/fold.html","position":2},{"@type":"Service","name":"Muun","url":"/services/muun.html","position":3},{"@type":"Service","name":"Phoenix","url":"/services/phoenix.html","position":4}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Breez","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/aqua.html#service","name":"Aqua","url":"https://buoybitcoin.com/services/aqua.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/fold.html#service","name":"Fold","url":"https://buoybitcoin.com/services/fold.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/muun.html#service","name":"Muun","url":"https://buoybitcoin.com/services/muun.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://buoybitcoin.com/services/phoenix.html"}}]}</script>
 <script>
 (function(){
   try {
