--- a/services/btc-pay.html
+++ b/services/btc-pay.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"BTC Pay — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/btc-pay.html","description":"BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals t…","about":{"@type":"Organization","name":"BTC Pay","url":"https://btcpayserver.org"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/btc-pay.html#webpage","name":"BTC Pay — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/btc-pay.html","inLanguage":"en","description":"BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals t…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/btc-pay.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/btc-pay.html#service","name":"BTC Pay","url":"https://btcpayserver.org","mainEntityOfPage":"https://buoybitcoin.com/services/btc-pay.html#webpage","provider":{"@type":"Organization","name":"BTC Pay","url":"https://btcpayserver.org"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Accept Bitcoin as a merchant","item":"https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"},{"@type":"ListItem","position":3,"name":"BTC Pay","item":"https://buoybitcoin.com/services/btc-pay.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -296,9 +297,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals to accept Bitcoin payments securely and pr...</p>
-        <p class="desktop-preview">BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals to accept Bitcoin payments securely and privately without intermediaries. All payments go directly to the user’s own wallet—private keys stay under user control, greatly enhancing privacy and censorship resistance.\n\nUnlike other payment solutions, users can create online stores, point‑of‑sale systems, tipping buttons, crowdfunding campaigns, or invoice links—all within a single interface. It avoids KYC, middleman fees, and personal data collection, appealing to anyone seeking financial sovereignty with seamless integration to hardware wallets or custodial services.\n\nUsers highlight its open‑source, self‑hosted nature and flexibility, commenting on how easy it is to connect a cloud‑hosted or home server, link a Bitcoin wallet, and enable Lightning payments—empowering them to accept Bitcoin anywhere, anytime, though some note the initial setup complexity for beginners.\n\nBTCPay Server’s mission is to democratize Bitcoin payments—removing fees, intermediaries, and technical barriers. Their vision for the future includes releasing a mobile app to enable non‑custodial Lightning payments for merchants, refining multisig and fee‑acceleration tools, and expanding e‑commerce integrations.</p>
+        <p class="desktop-preview">BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals to accept Bitcoin payments securely and privately without intermediaries. All payments go directly to the user&#039;s own wallet—private keys stay under user control, greatly enhancing privacy and censorship resistance.</p>
       </div>
-      <div class="description-full" style="display:none"><p>BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals to accept Bitcoin payments securely and privately without intermediaries. All payments go directly to the user’s own wallet—private keys stay under user control, greatly enhancing privacy and censorship resistance.\n\nUnlike other payment solutions, users can create online stores, point‑of‑sale systems, tipping buttons, crowdfunding campaigns, or invoice links—all within a single interface. It avoids KYC, middleman fees, and personal data collection, appealing to anyone seeking financial sovereignty with seamless integration to hardware wallets or custodial services.\n\nUsers highlight its open‑source, self‑hosted nature and flexibility, commenting on how easy it is to connect a cloud‑hosted or home server, link a Bitcoin wallet, and enable Lightning payments—empowering them to accept Bitcoin anywhere, anytime, though some note the initial setup complexity for beginners.\n\nBTCPay Server’s mission is to democratize Bitcoin payments—removing fees, intermediaries, and technical barriers. Their vision for the future includes releasing a mobile app to enable non‑custodial Lightning payments for merchants, refining multisig and fee‑acceleration tools, and expanding e‑commerce integrations.</p></div>
+      <div class="description-full" style="display:none"><p>BTC Pay Server, developed by a community-driven open-source project, is a self-hosted Bitcoin payment processor designed to empower merchants and individuals to accept Bitcoin payments securely and privately without intermediaries. All payments go directly to the user&#039;s own wallet—private keys stay under user control, greatly enhancing privacy and censorship resistance.</p><p>Unlike other payment solutions, users can create online stores, point‑of‑sale systems, tipping buttons, crowdfunding campaigns, or invoice links—all within a single interface. It avoids KYC, middleman fees, and personal data collection, appealing to anyone seeking financial sovereignty with seamless integration to hardware wallets or custodial services.</p><p>Users highlight its open‑source, self‑hosted nature and flexibility, commenting on how easy it is to connect a cloud‑hosted or home server, link a Bitcoin wallet, and enable Lightning payments—empowering them to accept Bitcoin anywhere, anytime, though some note the initial setup complexity for beginners.</p><p>BTCPay Server&#039;s mission is to democratize Bitcoin payments—removing fees, intermediaries, and technical barriers. Their vision for the future includes releasing a mobile app to enable non‑custodial Lightning payments for merchants, refining multisig and fee‑acceleration tools, and expanding e‑commerce integrations.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -346,6 +347,38 @@
 <!-- BUILD:END -->
 
 
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is BTCPay Server?</summary>
+  <div><p>BTCPay Server is a free, open‑source, self‑hosted Bitcoin and Lightning payment processor that sends payments directly to your wallet.</p></div>
+</details>
+
+<details>
+  <summary>Does BTCPay charge fees?</summary>
+  <div><p>No platform fees are charged by BTCPay; you only pay standard Bitcoin/Lightning network fees and your hosting costs.</p></div>
+</details>
+
+<details>
+  <summary>Is BTCPay custodial?</summary>
+  <div><p>No. It&#039;s non‑custodial—private keys stay under your control.</p></div>
+</details>
+
+<details>
+  <summary>Is BTCPay difficult to set up?</summary>
+  <div><p>Setup can be technical, but guides and one‑click deployments make it manageable for motivated beginners.</p></div>
+</details>
+
+<details>
+  <summary>Which plugins does BTCPay support?</summary>
+  <div><p>BTCPay integrates with WooCommerce, Shopify (via bridge), Magento, and many more ecommerce platforms.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is BTCPay Server?","acceptedAnswer":{"@type":"Answer","text":"BTCPay Server is a free, open‑source, self‑hosted Bitcoin and Lightning payment processor that sends payments directly to your wallet."}},{"@type":"Question","name":"Does BTCPay charge fees?","acceptedAnswer":{"@type":"Answer","text":"No platform fees are charged by BTCPay; you only pay standard Bitcoin/Lightning network fees and your hosting costs."}},{"@type":"Question","name":"Is BTCPay custodial?","acceptedAnswer":{"@type":"Answer","text":"No. It's non‑custodial—private keys stay under your control."}},{"@type":"Question","name":"Is BTCPay difficult to set up?","acceptedAnswer":{"@type":"Answer","text":"Setup can be technical, but guides and one‑click deployments make it manageable for motivated beginners."}},{"@type":"Question","name":"Which plugins does BTCPay support?","acceptedAnswer":{"@type":"Answer","text":"BTCPay integrates with WooCommerce, Shopify (via bridge), Magento, and many more ecommerce platforms."}}]}</script>
+
+
 <!-- Rating Modal -->
 <div id="rating-modal" class="rating-modal">
   <div class="rating-content">
@@ -384,7 +417,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to BTC Pay","itemListElement":[{"@type":"Service","name":"Lightspark","url":"/services/lightspark.html","position":1},{"@type":"Service","name":"OpenNode","url":"/services/opennode.html","position":2}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to BTC Pay","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/lightspark.html#service","name":"Lightspark","url":"https://buoybitcoin.com/services/lightspark.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/opennode.html#service","name":"OpenNode","url":"https://buoybitcoin.com/services/opennode.html"}}]}</script>
 <script>
 (function(){
   try {
