--- a/services/lightspark.html
+++ b/services/lightspark.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lightspark — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the “Mon…"/>
+  <meta name="description" content="Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the "Mon…"/>
   <link rel="canonical" href="https://buoybitcoin.com/services/lightspark.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/lightspark.html"/>
   <meta property="og:title" content="Lightspark — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the “Mon…"/>
+  <meta property="og:description" content="Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the "Mon…"/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="Lightspark — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the “Mon…"/>
+  <meta name="twitter:description" content="Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the "Mon…"/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=9">
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Lightspark — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/lightspark.html","description":"Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the “Mon…","about":{"@type":"Organization","name":"Lightspark","url":"https://www.lightspark.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/lightspark.html#webpage","name":"Lightspark — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/lightspark.html","inLanguage":"en","description":"Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the \"Mon…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/lightspark.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/lightspark.html#service","name":"Lightspark","url":"https://www.lightspark.com","mainEntityOfPage":"https://buoybitcoin.com/services/lightspark.html#webpage","provider":{"@type":"Organization","name":"Lightspark","url":"https://www.lightspark.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Accept Bitcoin as a merchant","item":"https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"},{"@type":"ListItem","position":3,"name":"Lightspark","item":"https://buoybitcoin.com/services/lightspark.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -295,10 +296,10 @@
             <div class="feature-value" data-service="lightspark">
     <div class="collapsible-description">
       <div class="description-preview">
-        <p class="mobile-preview">Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the “Money Grid,” a global, open payment network ...</p>
-        <p class="desktop-preview">Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the “Money Grid,” a global, open payment network using Bitcoin as a neutral settlement layer and leveraging Lightning for high-speed transfers.\n\nTheir target audience includes enterprises—digital banks, fintechs, wallets, exchanges—that need to move money across currencies and jurisdictions instantly and cheaply, as well as developers building Bitcoin-native payment applications or self-custodial wallets that need scalable infrastructure.\n\nWhat sets Lightspark apart is their end-to-end product integration, combining seamless liquidity management, intelligent routing, compliance-ready infrastructure, and human-friendly Universal Money Address (UMA) tech. This abstraction lets banks, wallets, exchanges, and businesses effortlessly send and receive fiat or crypto globally without having to manage Lightning channels, cross-border FX, or complex on-chain details. These tools have already seen traction with big partners.\n\nLooking forward, Lightspark’s vision is to scale the Money Grid globally—connecting all real-time payment systems and making Bitcoin native rails for everything from everyday consumer transfers to B2B fiat-fiat flows. Spark aims to resolve key Lightning limitations like self-custody economic scalability and lacks native token support. By building Spark open-source and fully backward compatible with Lightning, they hope to decentralize stablecoin issuance on Bitcoin and finally realize high-velocity, global Bitcoin-based payment settlement.</p>
+        <p class="mobile-preview">Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the &quot;Money Grid,&quot; a global, open payment network ...</p>
+        <p class="desktop-preview">Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the &quot;Money Grid,&quot; a global, open payment network using Bitcoin as a neutral settlement layer and leveraging Lightning for high-speed transfers.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the “Money Grid,” a global, open payment network using Bitcoin as a neutral settlement layer and leveraging Lightning for high-speed transfers.\n\nTheir target audience includes enterprises—digital banks, fintechs, wallets, exchanges—that need to move money across currencies and jurisdictions instantly and cheaply, as well as developers building Bitcoin-native payment applications or self-custodial wallets that need scalable infrastructure.\n\nWhat sets Lightspark apart is their end-to-end product integration, combining seamless liquidity management, intelligent routing, compliance-ready infrastructure, and human-friendly Universal Money Address (UMA) tech. This abstraction lets banks, wallets, exchanges, and businesses effortlessly send and receive fiat or crypto globally without having to manage Lightning channels, cross-border FX, or complex on-chain details. These tools have already seen traction with big partners.\n\nLooking forward, Lightspark’s vision is to scale the Money Grid globally—connecting all real-time payment systems and making Bitcoin native rails for everything from everyday consumer transfers to B2B fiat-fiat flows. Spark aims to resolve key Lightning limitations like self-custody economic scalability and lacks native token support. By building Spark open-source and fully backward compatible with Lightning, they hope to decentralize stablecoin issuance on Bitcoin and finally realize high-velocity, global Bitcoin-based payment settlement.</p></div>
+      <div class="description-full" style="display:none"><p>Lightspark is a payments infrastructure company founded by David Marcus (formerly of PayPal, Meta, and Diem) in 2022. They aim to build what they call the &quot;Money Grid,&quot; a global, open payment network using Bitcoin as a neutral settlement layer and leveraging Lightning for high-speed transfers.</p><p>Their target audience includes enterprises—digital banks, fintechs, wallets, exchanges—that need to move money across currencies and jurisdictions instantly and cheaply, as well as developers building Bitcoin-native payment applications or self-custodial wallets that need scalable infrastructure.</p><p>What sets Lightspark apart is their end-to-end product integration, combining seamless liquidity management, intelligent routing, compliance-ready infrastructure, and human-friendly Universal Money Address (UMA) tech. This abstraction lets banks, wallets, exchanges, and businesses effortlessly send and receive fiat or crypto globally without having to manage Lightning channels, cross-border FX, or complex on-chain details. These tools have already seen traction with big partners.</p><p>Looking forward, Lightspark&#039;s vision is to scale the Money Grid globally—connecting all real-time payment systems and making Bitcoin native rails for everything from everyday consumer transfers to B2B fiat-fiat flows. Spark aims to resolve key Lightning limitations like self-custody economic scalability and lacks native token support. By building Spark open-source and fully backward compatible with Lightning, they hope to decentralize stablecoin issuance on Bitcoin and finally realize high-velocity, global Bitcoin-based payment settlement.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -346,6 +347,28 @@
 <!-- BUILD:END -->
 
 
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Lightspark?</summary>
+  <div><p>Lightspark provides enterprise Lightning infrastructure and APIs to send and receive global payments with low latency and cost.</p></div>
+</details>
+
+<details>
+  <summary>Is Lightspark self‑custodial?</summary>
+  <div><p>Lightspark supports self‑custodial wallets via Spark and also offers managed nodes for enterprises that need it.</p></div>
+</details>
+
+<details>
+  <summary>Who is Lightspark for?</summary>
+  <div><p>Digital banks, wallets, exchanges and fintechs needing scalable Bitcoin/Lightning payments and fiat interoperability.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Lightspark?","acceptedAnswer":{"@type":"Answer","text":"Lightspark provides enterprise Lightning infrastructure and APIs to send and receive global payments with low latency and cost."}},{"@type":"Question","name":"Is Lightspark self‑custodial?","acceptedAnswer":{"@type":"Answer","text":"Lightspark supports self‑custodial wallets via Spark and also offers managed nodes for enterprises that need it."}},{"@type":"Question","name":"Who is Lightspark for?","acceptedAnswer":{"@type":"Answer","text":"Digital banks, wallets, exchanges and fintechs needing scalable Bitcoin/Lightning payments and fiat interoperability."}}]}</script>
+
+
 <!-- Rating Modal -->
 <div id="rating-modal" class="rating-modal">
   <div class="rating-content">
@@ -384,7 +407,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Lightspark","itemListElement":[{"@type":"Service","name":"BTC Pay","url":"/services/btc-pay.html","position":1},{"@type":"Service","name":"OpenNode","url":"/services/opennode.html","position":2}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Lightspark","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/btc-pay.html#service","name":"BTC Pay","url":"https://buoybitcoin.com/services/btc-pay.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/opennode.html#service","name":"OpenNode","url":"https://buoybitcoin.com/services/opennode.html"}}]}</script>
 <script>
 (function(){
   try {
