--- a/services/muun.html
+++ b/services/muun.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Muun — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/muun.html","description":"Muun is a non-custodial Bitcoin and Lightning wallet focused on giving users full control with minimal complexity. It separates itself from other wallets throu…","about":{"@type":"Organization","name":"Muun","url":"https://muun.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/muun.html#webpage","name":"Muun — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/muun.html","inLanguage":"en","description":"Muun is a non-custodial Bitcoin and Lightning wallet focused on giving users full control with minimal complexity. It separates itself from other wallets throu…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/muun.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/muun.html#service","name":"Muun","url":"https://muun.com","mainEntityOfPage":"https://buoybitcoin.com/services/muun.html#webpage","provider":{"@type":"Organization","name":"Muun","url":"https://muun.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Muun","item":"https://buoybitcoin.com/services/muun.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -261,9 +262,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Muun is a non-custodial Bitcoin and Lightning wallet focused on giving users full control with minimal complexity. It separates itself from other wallets through its unique security and backup model: ...</p>
-        <p class="desktop-preview">Muun is a non-custodial Bitcoin and Lightning wallet focused on giving users full control with minimal complexity. It separates itself from other wallets through its unique security and backup model: users recover access using an email, password, and encrypted recovery code—removing the need to manage a traditional 12-word seed phrase. This makes onboarding easier for beginners without compromising self-custody.\n\nMuun’s key differentiator is how it handles both Lightning and on-chain Bitcoin in one seamless balance. Users don’t have to manage channels or worry about liquidity—Muun automates that behind the scenes. You can send or receive Bitcoin however you want, and the wallet figures out whether to use Lightning or regular Bitcoin based on speed, cost, and availability. This hybrid approach appeals to users who want convenience but still own their funds.\n\nUsers praise Muun for its simple design, clear recovery process, and solid privacy. It&#039;s especially recommended for first-time users who want a secure but low-friction experience. However, some note that Muun doesn’t support Lightning addresses and that Lightning transactions may sometimes route via on-chain swaps, increasing fees or delay.\n\nMuun’s mission is to provide a simple, secure way to use Bitcoin daily without needing technical knowledge. It prioritizes non-custodial access, user control, and cross-platform consistency, helping new users enter Bitcoin while retaining ownership from day one.</p>
+        <p class="desktop-preview">Muun is a non-custodial Bitcoin and Lightning wallet focused on giving users full control with minimal complexity. It separates itself from other wallets through its unique security and backup model: users recover access using an email, password, and encrypted recovery code—removing the need to manage a traditional 12-word seed phrase. This makes onboarding easier for beginners without compromising self-custody.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Muun is a non-custodial Bitcoin and Lightning wallet focused on giving users full control with minimal complexity. It separates itself from other wallets through its unique security and backup model: users recover access using an email, password, and encrypted recovery code—removing the need to manage a traditional 12-word seed phrase. This makes onboarding easier for beginners without compromising self-custody.\n\nMuun’s key differentiator is how it handles both Lightning and on-chain Bitcoin in one seamless balance. Users don’t have to manage channels or worry about liquidity—Muun automates that behind the scenes. You can send or receive Bitcoin however you want, and the wallet figures out whether to use Lightning or regular Bitcoin based on speed, cost, and availability. This hybrid approach appeals to users who want convenience but still own their funds.\n\nUsers praise Muun for its simple design, clear recovery process, and solid privacy. It&#039;s especially recommended for first-time users who want a secure but low-friction experience. However, some note that Muun doesn’t support Lightning addresses and that Lightning transactions may sometimes route via on-chain swaps, increasing fees or delay.\n\nMuun’s mission is to provide a simple, secure way to use Bitcoin daily without needing technical knowledge. It prioritizes non-custodial access, user control, and cross-platform consistency, helping new users enter Bitcoin while retaining ownership from day one.</p></div>
+      <div class="description-full" style="display:none"><p>Muun is a non-custodial Bitcoin and Lightning wallet focused on giving users full control with minimal complexity. It separates itself from other wallets through its unique security and backup model: users recover access using an email, password, and encrypted recovery code—removing the need to manage a traditional 12-word seed phrase. This makes onboarding easier for beginners without compromising self-custody.</p><p>Muun&#039;s key differentiator is how it handles both Lightning and on-chain Bitcoin in one seamless balance. Users don&#039;t have to manage channels or worry about liquidity—Muun automates that behind the scenes. You can send or receive Bitcoin however you want, and the wallet figures out whether to use Lightning or regular Bitcoin based on speed, cost, and availability. This hybrid approach appeals to users who want convenience but still own their funds.</p><p>Users praise Muun for its simple design, clear recovery process, and solid privacy. It&#039;s especially recommended for first-time users who want a secure but low-friction experience. However, some note that Muun doesn&#039;t support Lightning addresses and that Lightning transactions may sometimes route via on-chain swaps, increasing fees or delay.</p><p>Muun&#039;s mission is to provide a simple, secure way to use Bitcoin daily without needing technical knowledge. It prioritizes non-custodial access, user control, and cross-platform consistency, helping new users enter Bitcoin while retaining ownership from day one.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -309,6 +310,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Muun Wallet?</summary>
+  <div><p>Muun is a non‑custodial Bitcoin and Lightning wallet that chooses the best network automatically for each payment.</p></div>
+</details>
+
+<details>
+  <summary>How does Muun backup work?</summary>
+  <div><p>Muun uses an email and encrypted recovery code instead of a traditional 12‑word seed phrase.</p></div>
+</details>
+
+<details>
+  <summary>Is Muun open source?</summary>
+  <div><p>Yes. Muun is open‑source and widely reviewed by the community.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Muun Wallet?","acceptedAnswer":{"@type":"Answer","text":"Muun is a non‑custodial Bitcoin and Lightning wallet that chooses the best network automatically for each payment."}},{"@type":"Question","name":"How does Muun backup work?","acceptedAnswer":{"@type":"Answer","text":"Muun uses an email and encrypted recovery code instead of a traditional 12‑word seed phrase."}},{"@type":"Question","name":"Is Muun open source?","acceptedAnswer":{"@type":"Answer","text":"Yes. Muun is open‑source and widely reviewed by the community."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -367,7 +390,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Muun","itemListElement":[{"@type":"Service","name":"Aqua","url":"/services/aqua.html","position":1},{"@type":"Service","name":"Breez","url":"/services/breez.html","position":2},{"@type":"Service","name":"Fold","url":"/services/fold.html","position":3},{"@type":"Service","name":"Phoenix","url":"/services/phoenix.html","position":4}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Muun","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/aqua.html#service","name":"Aqua","url":"https://buoybitcoin.com/services/aqua.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/breez.html#service","name":"Breez","url":"https://buoybitcoin.com/services/breez.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/fold.html#service","name":"Fold","url":"https://buoybitcoin.com/services/fold.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://buoybitcoin.com/services/phoenix.html"}}]}</script>
 <script>
 (function(){
   try {
