--- a/services/opennode.html
+++ b/services/opennode.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"OpenNode — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/opennode.html","description":"OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted…","about":{"@type":"Organization","name":"OpenNode","url":"https://opennode.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/opennode.html#webpage","name":"OpenNode — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/opennode.html","inLanguage":"en","description":"OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/opennode.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/opennode.html#service","name":"OpenNode","url":"https://opennode.com","mainEntityOfPage":"https://buoybitcoin.com/services/opennode.html#webpage","provider":{"@type":"Organization","name":"OpenNode","url":"https://opennode.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Accept Bitcoin as a merchant","item":"https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"},{"@type":"ListItem","position":3,"name":"OpenNode","item":"https://buoybitcoin.com/services/opennode.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -296,9 +297,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted checkouts, or its developer-friendly API...</p>
-        <p class="desktop-preview">OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted checkouts, or its developer-friendly API. Organisations that want a turnkey, compliant solution—especially mid-sized to large enterprises—can onboard easily with KYC and achieve global scale without building complex node infrastructure.\n\nIt offers instant, low-cost microtransactions with a focus on liquidity management, channel operations, and protocol support. For merchants, this means accessing Bitcoin payments both instantly and economically, alongside automatic settlement options in fiat or BTC. By abstracting away technical complexities like node handling, liquidity, and channel balance, OpenNode allows businesses to plug-and-play and scale efficiently.\n\nIt holds US regulatory licenses, manages KYC requirements, and maintains automated fiat conversions and payouts. This makes it ideal for businesses—especially blue-chip and enterprise-level—that require solid legal and financial backstops.\n\nTheir long-term vision is to see global businesses and platforms integrate Bitcoin payments as seamlessly as credit cards—secure, censorship-resistant, and frictionless—while pushing forward broader adoption of Bitcoin as a unit of exchange across borders and cultures.</p>
+        <p class="desktop-preview">OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted checkouts, or its developer-friendly API. Organisations that want a turnkey, compliant solution—especially mid-sized to large enterprises—can onboard easily with KYC and achieve global scale without building complex node infrastructure.</p>
       </div>
-      <div class="description-full" style="display:none"><p>OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted checkouts, or its developer-friendly API. Organisations that want a turnkey, compliant solution—especially mid-sized to large enterprises—can onboard easily with KYC and achieve global scale without building complex node infrastructure.\n\nIt offers instant, low-cost microtransactions with a focus on liquidity management, channel operations, and protocol support. For merchants, this means accessing Bitcoin payments both instantly and economically, alongside automatic settlement options in fiat or BTC. By abstracting away technical complexities like node handling, liquidity, and channel balance, OpenNode allows businesses to plug-and-play and scale efficiently.\n\nIt holds US regulatory licenses, manages KYC requirements, and maintains automated fiat conversions and payouts. This makes it ideal for businesses—especially blue-chip and enterprise-level—that require solid legal and financial backstops.\n\nTheir long-term vision is to see global businesses and platforms integrate Bitcoin payments as seamlessly as credit cards—secure, censorship-resistant, and frictionless—while pushing forward broader adoption of Bitcoin as a unit of exchange across borders and cultures.</p></div>
+      <div class="description-full" style="display:none"><p>OpenNode is a Bitcoin-first payment processor that empowers businesses to accept and send Bitcoin—either on-chain or via Lightning—using simple plugins, hosted checkouts, or its developer-friendly API. Organisations that want a turnkey, compliant solution—especially mid-sized to large enterprises—can onboard easily with KYC and achieve global scale without building complex node infrastructure.</p><p>It offers instant, low-cost microtransactions with a focus on liquidity management, channel operations, and protocol support. For merchants, this means accessing Bitcoin payments both instantly and economically, alongside automatic settlement options in fiat or BTC. By abstracting away technical complexities like node handling, liquidity, and channel balance, OpenNode allows businesses to plug-and-play and scale efficiently.</p><p>It holds US regulatory licenses, manages KYC requirements, and maintains automated fiat conversions and payouts. This makes it ideal for businesses—especially blue-chip and enterprise-level—that require solid legal and financial backstops.</p><p>Their long-term vision is to see global businesses and platforms integrate Bitcoin payments as seamlessly as credit cards—secure, censorship-resistant, and frictionless—while pushing forward broader adoption of Bitcoin as a unit of exchange across borders and cultures.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -346,6 +347,28 @@
 <!-- BUILD:END -->
 
 
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is OpenNode?</summary>
+  <div><p>OpenNode is a Bitcoin payment processor for businesses with hosted checkouts, plugins and APIs.</p></div>
+</details>
+
+<details>
+  <summary>Is OpenNode custodial?</summary>
+  <div><p>Funds are custodial until withdrawal or automatic settlement to your bank or wallet.</p></div>
+</details>
+
+<details>
+  <summary>What are OpenNode fees?</summary>
+  <div><p>Fees are typically around 1% depending on product and volume; see pricing for details.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is OpenNode?","acceptedAnswer":{"@type":"Answer","text":"OpenNode is a Bitcoin payment processor for businesses with hosted checkouts, plugins and APIs."}},{"@type":"Question","name":"Is OpenNode custodial?","acceptedAnswer":{"@type":"Answer","text":"Funds are custodial until withdrawal or automatic settlement to your bank or wallet."}},{"@type":"Question","name":"What are OpenNode fees?","acceptedAnswer":{"@type":"Answer","text":"Fees are typically around 1% depending on product and volume; see pricing for details."}}]}</script>
+
+
 <!-- Rating Modal -->
 <div id="rating-modal" class="rating-modal">
   <div class="rating-content">
@@ -384,7 +407,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to OpenNode","itemListElement":[{"@type":"Service","name":"BTC Pay","url":"/services/btc-pay.html","position":1},{"@type":"Service","name":"Lightspark","url":"/services/lightspark.html","position":2}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to OpenNode","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/btc-pay.html#service","name":"BTC Pay","url":"https://buoybitcoin.com/services/btc-pay.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/lightspark.html#service","name":"Lightspark","url":"https://buoybitcoin.com/services/lightspark.html"}}]}</script>
 <script>
 (function(){
   try {
