--- a/services/pocket.html
+++ b/services/pocket.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Pocket — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/pocket.html","description":"Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for…","about":{"@type":"Organization","name":"Pocket","url":"https://pocketbitcoin.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/pocket.html#webpage","name":"Pocket — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/pocket.html","inLanguage":"en","description":"Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/pocket.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/pocket.html#service","name":"Pocket","url":"https://pocketbitcoin.com","mainEntityOfPage":"https://buoybitcoin.com/services/pocket.html#webpage","provider":{"@type":"Organization","name":"Pocket","url":"https://pocketbitcoin.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Buy Bitcoin","item":"https://buoybitcoin.com/buy-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Pocket","item":"https://buoybitcoin.com/services/pocket.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -276,9 +277,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for daily buys up to €1,000 | 0.01 BTC | 0.0...</p>
-        <p class="desktop-preview">Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for daily buys up to €1,000 | 0.01 BTC | 0.01 BTC, prioritizing privacy. It offers one-off or recurring buys via bank transfer, with a 1.5% fee and no withdrawal fees, supporting select hardware wallets like Trezor and Ledger with message signing.\n\nPocket’s mission is to make Bitcoin ownership frictionless and private, promoting self-custody without complexity and with a vision to expand to a dozen more European countries and enhance wallet integrations.\n\nThe mobile app, and the web portal for managing orders and wallet settings, are praised for their simple interface and fast transactions, but some find the fees slightly high.</p>
+        <p class="desktop-preview">Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for daily buys up to €1,000 | 0.01 BTC | 0.01 BTC, prioritizing privacy. It offers one-off or recurring buys via bank transfer, with a 1.5% fee and no withdrawal fees, supporting select hardware wallets like Trezor and Ledger with message signing.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for daily buys up to €1,000 | 0.01 BTC | 0.01 BTC, prioritizing privacy. It offers one-off or recurring buys via bank transfer, with a 1.5% fee and no withdrawal fees, supporting select hardware wallets like Trezor and Ledger with message signing.\n\nPocket’s mission is to make Bitcoin ownership frictionless and private, promoting self-custody without complexity and with a vision to expand to a dozen more European countries and enhance wallet integrations.\n\nThe mobile app, and the web portal for managing orders and wallet settings, are praised for their simple interface and fast transactions, but some find the fees slightly high.</p></div>
+      <div class="description-full" style="display:none"><p>Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for daily buys up to €1,000 | 0.01 BTC | 0.01 BTC, prioritizing privacy. It offers one-off or recurring buys via bank transfer, with a 1.5% fee and no withdrawal fees, supporting select hardware wallets like Trezor and Ledger with message signing.</p><p>Pocket&#039;s mission is to make Bitcoin ownership frictionless and private, promoting self-custody without complexity and with a vision to expand to a dozen more European countries and enhance wallet integrations.</p><p>The mobile app, and the web portal for managing orders and wallet settings, are praised for their simple interface and fast transactions, but some find the fees slightly high.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -324,6 +325,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Pocket Bitcoin?</summary>
+  <div><p>Pocket is a non‑custodial service for recurring buys that sends Bitcoin directly to your own wallet.</p></div>
+</details>
+
+<details>
+  <summary>Does Pocket require KYC?</summary>
+  <div><p>Pocket is KYC‑light; verification applies for larger purchases based on EU regulations.</p></div>
+</details>
+
+<details>
+  <summary>Which regions does Pocket support?</summary>
+  <div><p>Pocket focuses on the EU, with support varying by country and bank.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Pocket Bitcoin?","acceptedAnswer":{"@type":"Answer","text":"Pocket is a non‑custodial service for recurring buys that sends Bitcoin directly to your own wallet."}},{"@type":"Question","name":"Does Pocket require KYC?","acceptedAnswer":{"@type":"Answer","text":"Pocket is KYC‑light; verification applies for larger purchases based on EU regulations."}},{"@type":"Question","name":"Which regions does Pocket support?","acceptedAnswer":{"@type":"Answer","text":"Pocket focuses on the EU, with support varying by country and bank."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -418,7 +441,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Pocket","itemListElement":[{"@type":"Service","name":"Bitonic","url":"/services/bitonic.html","position":1},{"@type":"Service","name":"Bull Bitcoin","url":"/services/bull-bitcoin.html","position":2},{"@type":"Service","name":"Hodlhodl","url":"/services/hodlhodl.html","position":3},{"@type":"Service","name":"Peach","url":"/services/peach.html","position":4},{"@type":"Service","name":"Relai","url":"/services/relai.html","position":5},{"@type":"Service","name":"River","url":"/services/river.html","position":6},{"@type":"Service","name":"Strike","url":"/services/strike.html","position":7},{"@type":"Service","name":"Swan","url":"/services/swan.html","position":8}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Pocket","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bitonic.html#service","name":"Bitonic","url":"https://buoybitcoin.com/services/bitonic.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service","name":"Bull Bitcoin","url":"https://buoybitcoin.com/services/bull-bitcoin.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/hodlhodl.html#service","name":"Hodlhodl","url":"https://buoybitcoin.com/services/hodlhodl.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/peach.html#service","name":"Peach","url":"https://buoybitcoin.com/services/peach.html"}},{"@type":"ListItem","position":5,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/relai.html#service","name":"Relai","url":"https://buoybitcoin.com/services/relai.html"}},{"@type":"ListItem","position":6,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/river.html#service","name":"River","url":"https://buoybitcoin.com/services/river.html"}},{"@type":"ListItem","position":7,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/strike.html#service","name":"Strike","url":"https://buoybitcoin.com/services/strike.html"}},{"@type":"ListItem","position":8,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/swan.html#service","name":"Swan","url":"https://buoybitcoin.com/services/swan.html"}}]}</script>
 <script>
 (function(){
   try {
