--- a/services/strike.html
+++ b/services/strike.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Strike — Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Strike’s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effe…"/>
+  <meta name="description" content="Strike's goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effe…"/>
   <link rel="canonical" href="https://buoybitcoin.com/services/strike.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/strike.html"/>
   <meta property="og:title" content="Strike — Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Strike’s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effe…"/>
+  <meta property="og:description" content="Strike's goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effe…"/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="Strike — Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Strike’s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effe…"/>
+  <meta name="twitter:description" content="Strike's goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effe…"/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=9">
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Strike — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/strike.html","description":"Strike’s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effe…","about":{"@type":"Organization","name":"Strike","url":"https://strike.me"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/strike.html#webpage","name":"Strike — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/strike.html","inLanguage":"en","description":"Strike's goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effe…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/strike.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/strike.html#service","name":"Strike","url":"https://strike.me","mainEntityOfPage":"https://buoybitcoin.com/services/strike.html#webpage","provider":{"@type":"Organization","name":"Strike","url":"https://strike.me"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Buy Bitcoin","item":"https://buoybitcoin.com/buy-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Strike","item":"https://buoybitcoin.com/services/strike.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -275,10 +276,10 @@
             <div class="feature-value" data-service="strike">
     <div class="collapsible-description">
       <div class="description-preview">
-        <p class="mobile-preview">Strike’s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effective to hold your Bitcoin in self-custod...</p>
-        <p class="desktop-preview">Strike’s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effective to hold your Bitcoin in self-custody. Its recurring buy feature at no fee costs after the initial setup, makes DCA (dollar‑cost averaging) simple and efficient. Strike also functions as a Lightning wallet, enabling quick micropayments with features like unique payment links and cash-to-Bitcoin transfers, and offers responsive customer support praised by users.\n\nStrike’s vision goes beyond being merely another payment app. It aims to democratize financial access, reduce dependency on traditional banks, and promote financial sovereignty by empowering individuals to manage their money independently. Their user-friendly app interface, available on both iOS and Android, highlights simplicity and accessibility with a minimalistic design.\n\nIn the US, Strike now offers a powerful Bill Pay feature aiming to reduce reliance on fiat currency and combat inflation by leveraging Bitcoin’s appreciating value, with automated tax reporting to simplify the process.\n\nAnother Strike feature is the Bitcoin‑backed loan that lets users pledge Bitcoin as collateral and borrow USD with no origination or early repayment fees. Loans can be repaid anytime without penalties.</p>
+        <p class="mobile-preview">Strike&#039;s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effective to hold your Bitcoin in self-custod...</p>
+        <p class="desktop-preview">Strike&#039;s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effective to hold your Bitcoin in self-custody. Its recurring buy feature at no fee costs after the initial setup, makes DCA (dollar‑cost averaging) simple and efficient. Strike also functions as a Lightning wallet, enabling quick micropayments with features like unique payment links and cash-to-Bitcoin transfers, and offers responsive customer support praised by users.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Strike’s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effective to hold your Bitcoin in self-custody. Its recurring buy feature at no fee costs after the initial setup, makes DCA (dollar‑cost averaging) simple and efficient. Strike also functions as a Lightning wallet, enabling quick micropayments with features like unique payment links and cash-to-Bitcoin transfers, and offers responsive customer support praised by users.\n\nStrike’s vision goes beyond being merely another payment app. It aims to democratize financial access, reduce dependency on traditional banks, and promote financial sovereignty by empowering individuals to manage their money independently. Their user-friendly app interface, available on both iOS and Android, highlights simplicity and accessibility with a minimalistic design.\n\nIn the US, Strike now offers a powerful Bill Pay feature aiming to reduce reliance on fiat currency and combat inflation by leveraging Bitcoin’s appreciating value, with automated tax reporting to simplify the process.\n\nAnother Strike feature is the Bitcoin‑backed loan that lets users pledge Bitcoin as collateral and borrow USD with no origination or early repayment fees. Loans can be repaid anytime without penalties.</p></div>
+      <div class="description-full" style="display:none"><p>Strike&#039;s goal is to make worldwide payments in Bitcoin as easy as possible, it offers free on‑chain and Lightning withdrawals, making it flexible and cost‑effective to hold your Bitcoin in self-custody. Its recurring buy feature at no fee costs after the initial setup, makes DCA (dollar‑cost averaging) simple and efficient. Strike also functions as a Lightning wallet, enabling quick micropayments with features like unique payment links and cash-to-Bitcoin transfers, and offers responsive customer support praised by users.</p><p>Strike&#039;s vision goes beyond being merely another payment app. It aims to democratize financial access, reduce dependency on traditional banks, and promote financial sovereignty by empowering individuals to manage their money independently. Their user-friendly app interface, available on both iOS and Android, highlights simplicity and accessibility with a minimalistic design.</p><p>In the US, Strike now offers a powerful Bill Pay feature aiming to reduce reliance on fiat currency and combat inflation by leveraging Bitcoin&#039;s appreciating value, with automated tax reporting to simplify the process.</p><p>Another Strike feature is the Bitcoin‑backed loan that lets users pledge Bitcoin as collateral and borrow USD with no origination or early repayment fees. Loans can be repaid anytime without penalties.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -324,6 +325,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>Is Strike self‑custodial?</summary>
+  <div><p>No. Strike is custodial, but you can withdraw on‑chain or via Lightning for free to self‑custody.</p></div>
+</details>
+
+<details>
+  <summary>Where is Strike available?</summary>
+  <div><p>Support focuses on North America, Europe, South America and Australia; some features like Bill Pay are U.S. only.</p></div>
+</details>
+
+<details>
+  <summary>What are Strike fees?</summary>
+  <div><p>Trading fees follow a tiered volume schedule; recurring orders are free after setup.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Is Strike self‑custodial?","acceptedAnswer":{"@type":"Answer","text":"No. Strike is custodial, but you can withdraw on‑chain or via Lightning for free to self‑custody."}},{"@type":"Question","name":"Where is Strike available?","acceptedAnswer":{"@type":"Answer","text":"Support focuses on North America, Europe, South America and Australia; some features like Bill Pay are U.S. only."}},{"@type":"Question","name":"What are Strike fees?","acceptedAnswer":{"@type":"Answer","text":"Trading fees follow a tiered volume schedule; recurring orders are free after setup."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -418,7 +441,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Strike","itemListElement":[{"@type":"Service","name":"Bitonic","url":"/services/bitonic.html","position":1},{"@type":"Service","name":"Bull Bitcoin","url":"/services/bull-bitcoin.html","position":2},{"@type":"Service","name":"Hodlhodl","url":"/services/hodlhodl.html","position":3},{"@type":"Service","name":"Peach","url":"/services/peach.html","position":4},{"@type":"Service","name":"Pocket","url":"/services/pocket.html","position":5},{"@type":"Service","name":"Relai","url":"/services/relai.html","position":6},{"@type":"Service","name":"River","url":"/services/river.html","position":7},{"@type":"Service","name":"Swan","url":"/services/swan.html","position":8}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Strike","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bitonic.html#service","name":"Bitonic","url":"https://buoybitcoin.com/services/bitonic.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service","name":"Bull Bitcoin","url":"https://buoybitcoin.com/services/bull-bitcoin.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/hodlhodl.html#service","name":"Hodlhodl","url":"https://buoybitcoin.com/services/hodlhodl.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/peach.html#service","name":"Peach","url":"https://buoybitcoin.com/services/peach.html"}},{"@type":"ListItem","position":5,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/pocket.html#service","name":"Pocket","url":"https://buoybitcoin.com/services/pocket.html"}},{"@type":"ListItem","position":6,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/relai.html#service","name":"Relai","url":"https://buoybitcoin.com/services/relai.html"}},{"@type":"ListItem","position":7,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/river.html#service","name":"River","url":"https://buoybitcoin.com/services/river.html"}},{"@type":"ListItem","position":8,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/swan.html#service","name":"Swan","url":"https://buoybitcoin.com/services/swan.html"}}]}</script>
 <script>
 (function(){
   try {
