--- a/services/swan.html
+++ b/services/swan.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Swan — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/swan.html","description":"Swan Bitcoin, launched by Cory Klippsten and based in California, is a platform focused on making it easy for beginners to buy and save Bitcoin.\\n\\nWhat makes…","about":{"@type":"Organization","name":"Swan","url":"https://www.swanbitcoin.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/swan.html#webpage","name":"Swan — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/swan.html","inLanguage":"en","description":"Swan Bitcoin, launched by Cory Klippsten and based in California, is a platform focused on making it easy for beginners to buy and save Bitcoin.\\n\\nWhat makes…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/swan.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/swan.html#service","name":"Swan","url":"https://www.swanbitcoin.com","mainEntityOfPage":"https://buoybitcoin.com/services/swan.html#webpage","provider":{"@type":"Organization","name":"Swan","url":"https://www.swanbitcoin.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Buy Bitcoin","item":"https://buoybitcoin.com/buy-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Swan","item":"https://buoybitcoin.com/services/swan.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -275,10 +276,10 @@
             <div class="feature-value" data-service="swan">
     <div class="collapsible-description">
       <div class="description-preview">
-        <p class="mobile-preview">Swan Bitcoin, launched by Cory Klippsten and based in California, is a platform focused on making it easy for beginners to buy and save Bitcoin.\n\nWhat makes Swan distinct is its focus on self-custod...</p>
-        <p class="desktop-preview">Swan Bitcoin, launched by Cory Klippsten and based in California, is a platform focused on making it easy for beginners to buy and save Bitcoin.\n\nWhat makes Swan distinct is its focus on self-custody support and education. It automatically withdraws BTC weekly to your own address and provides guides for self-custody, while also offering Swan Guard with fraud protection and identity verification tools. Swan prioritizes teaching users about Bitcoin’s value for financial freedom. Swan also targets long-term savers by offering IRA products making Bitcoin tax-advantaged retirement savings easier.\n\nSwan offers zero-fee purchases on the first $10,000, a low 0.99% fee for recurring buys, and free withdrawals to personal wallets, encouraging self-custody. Its app is praised for its clean design and simple setup. However, some users report slow customer support and issues with account restrictions.\n\nIts vision is to onboard 10 million Bitcoin users by promoting Bitcoin as better money for a decentralized future.</p>
+        <p class="mobile-preview">Swan Bitcoin, launched by Cory Klippsten and based in California, is a platform focused on making it easy for beginners to buy and save Bitcoin.</p>
+        <p class="desktop-preview">Swan Bitcoin, launched by Cory Klippsten and based in California, is a platform focused on making it easy for beginners to buy and save Bitcoin.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Swan Bitcoin, launched by Cory Klippsten and based in California, is a platform focused on making it easy for beginners to buy and save Bitcoin.\n\nWhat makes Swan distinct is its focus on self-custody support and education. It automatically withdraws BTC weekly to your own address and provides guides for self-custody, while also offering Swan Guard with fraud protection and identity verification tools. Swan prioritizes teaching users about Bitcoin’s value for financial freedom. Swan also targets long-term savers by offering IRA products making Bitcoin tax-advantaged retirement savings easier.\n\nSwan offers zero-fee purchases on the first $10,000, a low 0.99% fee for recurring buys, and free withdrawals to personal wallets, encouraging self-custody. Its app is praised for its clean design and simple setup. However, some users report slow customer support and issues with account restrictions.\n\nIts vision is to onboard 10 million Bitcoin users by promoting Bitcoin as better money for a decentralized future.</p></div>
+      <div class="description-full" style="display:none"><p>Swan Bitcoin, launched by Cory Klippsten and based in California, is a platform focused on making it easy for beginners to buy and save Bitcoin.</p><p>What makes Swan distinct is its focus on self-custody support and education. It automatically withdraws BTC weekly to your own address and provides guides for self-custody, while also offering Swan Guard with fraud protection and identity verification tools. Swan prioritizes teaching users about Bitcoin&#039;s value for financial freedom. Swan also targets long-term savers by offering IRA products making Bitcoin tax-advantaged retirement savings easier.</p><p>Swan offers zero-fee purchases on the first $10,000, a low 0.99% fee for recurring buys, and free withdrawals to personal wallets, encouraging self-custody. Its app is praised for its clean design and simple setup. However, some users report slow customer support and issues with account restrictions.</p><p>Its vision is to onboard 10 million Bitcoin users by promoting Bitcoin as better money for a decentralized future.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -324,6 +325,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Swan Bitcoin?</summary>
+  <div><p>Swan is a Bitcoin savings platform with recurring buys, education and IRA products for U.S. users.</p></div>
+</details>
+
+<details>
+  <summary>Does Swan support automatic withdrawals?</summary>
+  <div><p>Yes. Swan encourages self‑custody and supports automatic withdrawals to your address.</p></div>
+</details>
+
+<details>
+  <summary>Where is Swan available?</summary>
+  <div><p>Swan primarily serves the U.S.; availability elsewhere is limited.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Swan Bitcoin?","acceptedAnswer":{"@type":"Answer","text":"Swan is a Bitcoin savings platform with recurring buys, education and IRA products for U.S. users."}},{"@type":"Question","name":"Does Swan support automatic withdrawals?","acceptedAnswer":{"@type":"Answer","text":"Yes. Swan encourages self‑custody and supports automatic withdrawals to your address."}},{"@type":"Question","name":"Where is Swan available?","acceptedAnswer":{"@type":"Answer","text":"Swan primarily serves the U.S.; availability elsewhere is limited."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -418,7 +441,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Swan","itemListElement":[{"@type":"Service","name":"Bitonic","url":"/services/bitonic.html","position":1},{"@type":"Service","name":"Bull Bitcoin","url":"/services/bull-bitcoin.html","position":2},{"@type":"Service","name":"Hodlhodl","url":"/services/hodlhodl.html","position":3},{"@type":"Service","name":"Peach","url":"/services/peach.html","position":4},{"@type":"Service","name":"Pocket","url":"/services/pocket.html","position":5},{"@type":"Service","name":"Relai","url":"/services/relai.html","position":6},{"@type":"Service","name":"River","url":"/services/river.html","position":7},{"@type":"Service","name":"Strike","url":"/services/strike.html","position":8}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Swan","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bitonic.html#service","name":"Bitonic","url":"https://buoybitcoin.com/services/bitonic.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service","name":"Bull Bitcoin","url":"https://buoybitcoin.com/services/bull-bitcoin.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/hodlhodl.html#service","name":"Hodlhodl","url":"https://buoybitcoin.com/services/hodlhodl.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/peach.html#service","name":"Peach","url":"https://buoybitcoin.com/services/peach.html"}},{"@type":"ListItem","position":5,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/pocket.html#service","name":"Pocket","url":"https://buoybitcoin.com/services/pocket.html"}},{"@type":"ListItem","position":6,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/relai.html#service","name":"Relai","url":"https://buoybitcoin.com/services/relai.html"}},{"@type":"ListItem","position":7,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/river.html#service","name":"River","url":"https://buoybitcoin.com/services/river.html"}},{"@type":"ListItem","position":8,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/strike.html#service","name":"Strike","url":"https://buoybitcoin.com/services/strike.html"}}]}</script>
 <script>
 (function(){
   try {
