--- a/what-is-bitcoin.html
+++ b/what-is-bitcoin.html
@@ -101,6 +101,12 @@
   <p>Bitcoin is an <strong>open, decentralized, and secure protocol for money</strong>. It allows anyone, anywhere, to <strong>store, send, and receive value</strong> without needing permission from a government, bank, or corporation.</p>
   <p>It’s not a company or an app. It’s a set of mathematical rules, enforced by a global network of participants, and <strong>secured by energy</strong>.</p>
 
+  <blockquote class="pull-quote" aria-label="Quote by Jeff Booth">
+    <p>Bitcoin is the most profound shift humanity has ever seen. It is more profound than any invention humanity has ever created.</p>
+    <p>If it stays decentralized and secure then no matter what we do it is imposing new rules on the world. That means prices fall to the marginal costs of production and the free market is deflationary. You don’t have to believe in that statement but it’s happening to you anyways. So if you don’t hold bitcoin, your prices are going up. If you denominate in bitcoin, all prices are going down. And they will forever.</p>
+    <cite>— Jeff Booth</cite>
+  </blockquote>
+
   <h2>Why is Bitcoin Revolutionary?</h2>
   <p>Because it does two things that have never existed together before:</p>
   <ul>
