--- a/faq.html
+++ b/faq.html
@@ -128,6 +128,11 @@
 
           <h2>How does Buoy make money?</h2>
           <p>Currently, Buoy is a free tool for the community. We may explore sustainable revenue options, but we will always prioritize neutrality and transparency.</p>
+
+          <h2>Why is Buoy Bitcoin-only?</h2>
+          <p>Bitcoin is money. It's a neutral, decentralized monetary network with a fixed supply (21 million) and no company or CEO that can change the rules.</p>
+          <p>"Crypto" is a catch-all for thousands of venture-like tokens run by teams with variable rules, changing supplies, and higher counterparty risk.</p>
+          <p>If you want long-term savings and true self-custody, choose bitcoin-only services. If you want to speculate on startup-style projects, that's crypto — a different game.</p>
         </div>
       </section>
     </main>
@@ -248,6 +253,15 @@
           "acceptedAnswer": {
             "@type": "Answer",
             "text": "Currently, Buoy is a free tool for the community. We may explore sustainable revenue options like sponsorships or partnerships, but we will always prioritize neutrality and transparency."
+          }
+        }
+        ,
+        {
+          "@type": "Question",
+          "name": "Why is Buoy Bitcoin-only?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Bitcoin is money. It’s a neutral, decentralized monetary network with a fixed supply (21 million) and no company or CEO that can change the rules. ‘Crypto’ is a catch-all for thousands of venture-like tokens run by teams with variable rules, changing supplies, and higher counterparty risk. If you want long-term savings and true self-custody, choose bitcoin-only services. If you want to speculate on startup-style projects, that’s crypto — a different game."
           }
         }
       ]
