--- a/services/bitonic.html
+++ b/services/bitonic.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Bitonic — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/bitonic.html","description":"Bitonic is the oldest and largest Bitcoin-only broker in the Netherlands, founded in 2012, with a reputation for reliability and simplicity. They offer fast, a…","about":{"@type":"Organization","name":"Bitonic","url":"https://bitonic.nl"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/bitonic.html#webpage","name":"Bitonic — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/bitonic.html","inLanguage":"en","description":"Bitonic is the oldest and largest Bitcoin-only broker in the Netherlands, founded in 2012, with a reputation for reliability and simplicity. They offer fast, a…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/bitonic.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/bitonic.html#service","name":"Bitonic","url":"https://bitonic.nl","mainEntityOfPage":"https://buoybitcoin.com/services/bitonic.html#webpage","provider":{"@type":"Organization","name":"Bitonic","url":"https://bitonic.nl"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Buy Bitcoin","item":"https://buoybitcoin.com/buy-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Bitonic","item":"https://buoybitcoin.com/services/bitonic.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -276,9 +277,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Bitonic is the oldest and largest Bitcoin-only broker in the Netherlands, founded in 2012, with a reputation for reliability and simplicity. They offer fast, automatic Bitcoin delivery via iDEAL, SEPA...</p>
-        <p class="desktop-preview">Bitonic is the oldest and largest Bitcoin-only broker in the Netherlands, founded in 2012, with a reputation for reliability and simplicity. They offer fast, automatic Bitcoin delivery via iDEAL, SEPA, and Bancontact, and their fully automated system ensures quick transfers.\n\nIt stands out with its direct purchase model, selling Bitcoin from its own stock for instant delivery and transparent pricing, avoiding third-party intermediaries. Bitonic offers buying, selling, and saving Bitcoin via iDEAL, SEPA, or Bancontact and provide an Auto Invest savings feature, allowing users to easily set up recurring Bitcoin purchases, (though only up to €250 | 271,023 sats) and a business solution for Bitcoin payments.\n\nIts app, rated 4.5 stars on iOS, is praised for its clean, no-nonsense design, though some users report slow verification. The platform uses multi-signature cold storage for security and encourages self-custody with personal wallets.\n\nTheir vision focuses on making Bitcoin accessible and easy for Dutch and European users, backed by education through Bitonic Academy and news via Bitcoin.nl. Overall, Bitonic is ideal for beginners who want a reliable, no-altcoin platform in Europe, with fast transactions, clear pricing and a strong local support.</p>
+        <p class="desktop-preview">Bitonic is the oldest and largest Bitcoin-only broker in the Netherlands, founded in 2012, with a reputation for reliability and simplicity. They offer fast, automatic Bitcoin delivery via iDEAL, SEPA, and Bancontact, and their fully automated system ensures quick transfers.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Bitonic is the oldest and largest Bitcoin-only broker in the Netherlands, founded in 2012, with a reputation for reliability and simplicity. They offer fast, automatic Bitcoin delivery via iDEAL, SEPA, and Bancontact, and their fully automated system ensures quick transfers.\n\nIt stands out with its direct purchase model, selling Bitcoin from its own stock for instant delivery and transparent pricing, avoiding third-party intermediaries. Bitonic offers buying, selling, and saving Bitcoin via iDEAL, SEPA, or Bancontact and provide an Auto Invest savings feature, allowing users to easily set up recurring Bitcoin purchases, (though only up to €250 | 271,023 sats) and a business solution for Bitcoin payments.\n\nIts app, rated 4.5 stars on iOS, is praised for its clean, no-nonsense design, though some users report slow verification. The platform uses multi-signature cold storage for security and encourages self-custody with personal wallets.\n\nTheir vision focuses on making Bitcoin accessible and easy for Dutch and European users, backed by education through Bitonic Academy and news via Bitcoin.nl. Overall, Bitonic is ideal for beginners who want a reliable, no-altcoin platform in Europe, with fast transactions, clear pricing and a strong local support.</p></div>
+      <div class="description-full" style="display:none"><p>Bitonic is the oldest and largest Bitcoin-only broker in the Netherlands, founded in 2012, with a reputation for reliability and simplicity. They offer fast, automatic Bitcoin delivery via iDEAL, SEPA, and Bancontact, and their fully automated system ensures quick transfers.</p><p>It stands out with its direct purchase model, selling Bitcoin from its own stock for instant delivery and transparent pricing, avoiding third-party intermediaries. Bitonic offers buying, selling, and saving Bitcoin via iDEAL, SEPA, or Bancontact and provide an Auto Invest savings feature, allowing users to easily set up recurring Bitcoin purchases, (though only up to €250 | 271,023 sats) and a business solution for Bitcoin payments.</p><p>Its app, rated 4.5 stars on iOS, is praised for its clean, no-nonsense design, though some users report slow verification. The platform uses multi-signature cold storage for security and encourages self-custody with personal wallets.</p><p>Their vision focuses on making Bitcoin accessible and easy for Dutch and European users, backed by education through Bitonic Academy and news via Bitcoin.nl. Overall, Bitonic is ideal for beginners who want a reliable, no-altcoin platform in Europe, with fast transactions, clear pricing and a strong local support.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -324,6 +325,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Bitonic?</summary>
+  <div><p>Bitonic is the Netherlands&#039; oldest Bitcoin‑only broker, offering fast iDEAL and SEPA buys with automatic delivery to your wallet.</p></div>
+</details>
+
+<details>
+  <summary>Does Bitonic support recurring buys?</summary>
+  <div><p>Yes. Auto Invest allows recurring buys; fees may apply beyond the free monthly tier.</p></div>
+</details>
+
+<details>
+  <summary>Is Bitonic custodial?</summary>
+  <div><p>Bitonic is custodial for purchases, but encourages self‑custody and supports automatic withdrawals to your own wallet.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Bitonic?","acceptedAnswer":{"@type":"Answer","text":"Bitonic is the Netherlands' oldest Bitcoin‑only broker, offering fast iDEAL and SEPA buys with automatic delivery to your wallet."}},{"@type":"Question","name":"Does Bitonic support recurring buys?","acceptedAnswer":{"@type":"Answer","text":"Yes. Auto Invest allows recurring buys; fees may apply beyond the free monthly tier."}},{"@type":"Question","name":"Is Bitonic custodial?","acceptedAnswer":{"@type":"Answer","text":"Bitonic is custodial for purchases, but encourages self‑custody and supports automatic withdrawals to your own wallet."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -418,7 +441,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Bitonic","itemListElement":[{"@type":"Service","name":"Bull Bitcoin","url":"/services/bull-bitcoin.html","position":1},{"@type":"Service","name":"Hodlhodl","url":"/services/hodlhodl.html","position":2},{"@type":"Service","name":"Peach","url":"/services/peach.html","position":3},{"@type":"Service","name":"Pocket","url":"/services/pocket.html","position":4},{"@type":"Service","name":"Relai","url":"/services/relai.html","position":5},{"@type":"Service","name":"River","url":"/services/river.html","position":6},{"@type":"Service","name":"Strike","url":"/services/strike.html","position":7},{"@type":"Service","name":"Swan","url":"/services/swan.html","position":8}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Bitonic","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service","name":"Bull Bitcoin","url":"https://buoybitcoin.com/services/bull-bitcoin.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/hodlhodl.html#service","name":"Hodlhodl","url":"https://buoybitcoin.com/services/hodlhodl.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/peach.html#service","name":"Peach","url":"https://buoybitcoin.com/services/peach.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/pocket.html#service","name":"Pocket","url":"https://buoybitcoin.com/services/pocket.html"}},{"@type":"ListItem","position":5,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/relai.html#service","name":"Relai","url":"https://buoybitcoin.com/services/relai.html"}},{"@type":"ListItem","position":6,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/river.html#service","name":"River","url":"https://buoybitcoin.com/services/river.html"}},{"@type":"ListItem","position":7,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/strike.html#service","name":"Strike","url":"https://buoybitcoin.com/services/strike.html"}},{"@type":"ListItem","position":8,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/swan.html#service","name":"Swan","url":"https://buoybitcoin.com/services/swan.html"}}]}</script>
 <script>
 (function(){
   try {
