--- a/services/mynode.html
+++ b/services/mynode.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"myNode — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/mynode.html","description":"MyNode is a turnkey Bitcoin and Lightning node platform that combines open‑source software with a polished, full‑featured web interface, making it accessible t…","about":{"@type":"Organization","name":"myNode","url":"https://mynodebtc.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/mynode.html#webpage","name":"myNode — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/mynode.html","inLanguage":"en","description":"MyNode is a turnkey Bitcoin and Lightning node platform that combines open‑source software with a polished, full‑featured web interface, making it accessible t…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/mynode.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/mynode.html#service","name":"myNode","url":"https://mynodebtc.com","mainEntityOfPage":"https://buoybitcoin.com/services/mynode.html#webpage","provider":{"@type":"Organization","name":"myNode","url":"https://mynodebtc.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Run my own node","item":"https://buoybitcoin.com/run-my-own-node.html"},{"@type":"ListItem","position":3,"name":"myNode","item":"https://buoybitcoin.com/services/mynode.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -220,10 +221,10 @@
             <div class="feature-value" data-service="mynode">
     <div class="collapsible-description">
       <div class="description-preview">
-        <p class="mobile-preview">MyNode is a turnkey Bitcoin and Lightning node platform that combines open‑source software with a polished, full‑featured web interface, making it accessible to both novices and advanced users.\n\nWha...</p>
-        <p class="desktop-preview">MyNode is a turnkey Bitcoin and Lightning node platform that combines open‑source software with a polished, full‑featured web interface, making it accessible to both novices and advanced users.\n\nWhat sets MyNode apart is its integration of a wide array of Bitcoin tools all in one place—your own full node, Lightning (via LND), Electrum server, block explorers, wallet pairing tools and more—coordinated through an intuitive UI.\n\nThe target audience ranges from beginners who can get started with simple, plug‑and‑play hardware builds or prebuilt units, to seasoned users. The Premium+ hardware options (Model One/Two) bundle top‑spec hardware with built‑in support and warranty, while DIYers can start with the free software and chosen hardware.\n\nLooking ahead, MyNode continues to expand its ecosystem with new beta apps and features plus consistent rapid updates and community‑driven development. Their vision is clear: empower individuals to run a sovereign, private, and all‑in‑one Bitcoin infrastructure at home, easily and robustly, with ongoing innovation and support.</p>
+        <p class="mobile-preview">MyNode is a turnkey Bitcoin and Lightning node platform that combines open‑source software with a polished, full‑featured web interface, making it accessible to both novices and advanced users.</p>
+        <p class="desktop-preview">MyNode is a turnkey Bitcoin and Lightning node platform that combines open‑source software with a polished, full‑featured web interface, making it accessible to both novices and advanced users.</p>
       </div>
-      <div class="description-full" style="display:none"><p>MyNode is a turnkey Bitcoin and Lightning node platform that combines open‑source software with a polished, full‑featured web interface, making it accessible to both novices and advanced users.\n\nWhat sets MyNode apart is its integration of a wide array of Bitcoin tools all in one place—your own full node, Lightning (via LND), Electrum server, block explorers, wallet pairing tools and more—coordinated through an intuitive UI.\n\nThe target audience ranges from beginners who can get started with simple, plug‑and‑play hardware builds or prebuilt units, to seasoned users. The Premium+ hardware options (Model One/Two) bundle top‑spec hardware with built‑in support and warranty, while DIYers can start with the free software and chosen hardware.\n\nLooking ahead, MyNode continues to expand its ecosystem with new beta apps and features plus consistent rapid updates and community‑driven development. Their vision is clear: empower individuals to run a sovereign, private, and all‑in‑one Bitcoin infrastructure at home, easily and robustly, with ongoing innovation and support.</p></div>
+      <div class="description-full" style="display:none"><p>MyNode is a turnkey Bitcoin and Lightning node platform that combines open‑source software with a polished, full‑featured web interface, making it accessible to both novices and advanced users.</p><p>What sets MyNode apart is its integration of a wide array of Bitcoin tools all in one place—your own full node, Lightning (via LND), Electrum server, block explorers, wallet pairing tools and more—coordinated through an intuitive UI.</p><p>The target audience ranges from beginners who can get started with simple, plug‑and‑play hardware builds or prebuilt units, to seasoned users. The Premium+ hardware options (Model One/Two) bundle top‑spec hardware with built‑in support and warranty, while DIYers can start with the free software and chosen hardware.</p><p>Looking ahead, MyNode continues to expand its ecosystem with new beta apps and features plus consistent rapid updates and community‑driven development. Their vision is clear: empower individuals to run a sovereign, private, and all‑in‑one Bitcoin infrastructure at home, easily and robustly, with ongoing innovation and support.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -271,6 +272,28 @@
 <!-- BUILD:END -->
 
 
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is myNode?</summary>
+  <div><p>myNode is a turnkey Bitcoin and Lightning node platform with a polished web UI and many integrated apps.</p></div>
+</details>
+
+<details>
+  <summary>Is myNode free?</summary>
+  <div><p>Core software is free; premium features and supported hardware are available for a fee.</p></div>
+</details>
+
+<details>
+  <summary>Which devices does myNode support?</summary>
+  <div><p>Raspberry Pi, DIY x86 hardware, and prebuilt myNode devices.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is myNode?","acceptedAnswer":{"@type":"Answer","text":"myNode is a turnkey Bitcoin and Lightning node platform with a polished web UI and many integrated apps."}},{"@type":"Question","name":"Is myNode free?","acceptedAnswer":{"@type":"Answer","text":"Core software is free; premium features and supported hardware are available for a fee."}},{"@type":"Question","name":"Which devices does myNode support?","acceptedAnswer":{"@type":"Answer","text":"Raspberry Pi, DIY x86 hardware, and prebuilt myNode devices."}}]}</script>
+
+
 <!-- Rating Modal -->
 <div id="rating-modal" class="rating-modal">
   <div class="rating-content">
@@ -309,7 +332,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to myNode","itemListElement":[{"@type":"Service","name":"Start9","url":"/services/start9.html","position":1},{"@type":"Service","name":"Umbrel","url":"/services/umbrel.html","position":2}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to myNode","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/start9.html#service","name":"Start9","url":"https://buoybitcoin.com/services/start9.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/umbrel.html#service","name":"Umbrel","url":"https://buoybitcoin.com/services/umbrel.html"}}]}</script>
 <script>
 (function(){
   try {
