--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Phoenix — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/phoenix.html","description":"Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of us…","about":{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/phoenix.html#webpage","name":"Phoenix — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/phoenix.html","inLanguage":"en","description":"Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of us…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/phoenix.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://phoenix.acinq.co","mainEntityOfPage":"https://buoybitcoin.com/services/phoenix.html#webpage","provider":{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Phoenix","item":"https://buoybitcoin.com/services/phoenix.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -260,10 +261,10 @@
             <div class="feature-value" data-service="phoenix">
     <div class="collapsible-description">
       <div class="description-preview">
-        <p class="mobile-preview">Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.\n\nPhoenix runs a native...</p>
-        <p class="desktop-preview">Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.\n\nPhoenix runs a native Lightning node on the user’s device, connecting to ACINQ’s node for automated channel management, eliminating the need for swaps and reducing fees for direct Lightning payments. Additionally, Phoenix allows connections to a user’s own Bitcoin node for enhanced privacy.\n\nFor beginners, Phoenix’s intuitive UI, low-cost Lightning transactions, and self-custodial design make it ideal for those starting with Bitcoin, though channel size limitations may require occasional fee adjustments for frequent receivers. Compared to Breez’s merchant-centric features or Aqua’s Liquid-focused versatility, Phoenix excels in delivering a straightforward, cost-effective Lightning experience with robust privacy options.</p>
+        <p class="mobile-preview">Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.</p>
+        <p class="desktop-preview">Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.\n\nPhoenix runs a native Lightning node on the user’s device, connecting to ACINQ’s node for automated channel management, eliminating the need for swaps and reducing fees for direct Lightning payments. Additionally, Phoenix allows connections to a user’s own Bitcoin node for enhanced privacy.\n\nFor beginners, Phoenix’s intuitive UI, low-cost Lightning transactions, and self-custodial design make it ideal for those starting with Bitcoin, though channel size limitations may require occasional fee adjustments for frequent receivers. Compared to Breez’s merchant-centric features or Aqua’s Liquid-focused versatility, Phoenix excels in delivering a straightforward, cost-effective Lightning experience with robust privacy options.</p></div>
+      <div class="description-full" style="display:none"><p>Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.</p><p>Phoenix runs a native Lightning node on the user&#039;s device, connecting to ACINQ&#039;s node for automated channel management, eliminating the need for swaps and reducing fees for direct Lightning payments. Additionally, Phoenix allows connections to a user&#039;s own Bitcoin node for enhanced privacy.</p><p>For beginners, Phoenix&#039;s intuitive UI, low-cost Lightning transactions, and self-custodial design make it ideal for those starting with Bitcoin, though channel size limitations may require occasional fee adjustments for frequent receivers. Compared to Breez&#039;s merchant-centric features or Aqua&#039;s Liquid-focused versatility, Phoenix excels in delivering a straightforward, cost-effective Lightning experience with robust privacy options.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -309,6 +310,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Phoenix Wallet?</summary>
+  <div><p>Phoenix is a self‑custodial mobile wallet that runs a Lightning node on‑device for fast payments.</p></div>
+</details>
+
+<details>
+  <summary>Does Phoenix support on‑chain?</summary>
+  <div><p>Yes. You can send and receive on‑chain using swaps; channel creation can incur higher on‑chain fees.</p></div>
+</details>
+
+<details>
+  <summary>Can Phoenix connect to my own node?</summary>
+  <div><p>Yes. Phoenix can connect to your own node for improved privacy.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Phoenix Wallet?","acceptedAnswer":{"@type":"Answer","text":"Phoenix is a self‑custodial mobile wallet that runs a Lightning node on‑device for fast payments."}},{"@type":"Question","name":"Does Phoenix support on‑chain?","acceptedAnswer":{"@type":"Answer","text":"Yes. You can send and receive on‑chain using swaps; channel creation can incur higher on‑chain fees."}},{"@type":"Question","name":"Can Phoenix connect to my own node?","acceptedAnswer":{"@type":"Answer","text":"Yes. Phoenix can connect to your own node for improved privacy."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -367,7 +390,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Phoenix","itemListElement":[{"@type":"Service","name":"Aqua","url":"/services/aqua.html","position":1},{"@type":"Service","name":"Breez","url":"/services/breez.html","position":2},{"@type":"Service","name":"Fold","url":"/services/fold.html","position":3},{"@type":"Service","name":"Muun","url":"/services/muun.html","position":4}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Phoenix","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/aqua.html#service","name":"Aqua","url":"https://buoybitcoin.com/services/aqua.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/breez.html#service","name":"Breez","url":"https://buoybitcoin.com/services/breez.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/fold.html#service","name":"Fold","url":"https://buoybitcoin.com/services/fold.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/muun.html#service","name":"Muun","url":"https://buoybitcoin.com/services/muun.html"}}]}</script>
 <script>
 (function(){
   try {
