--- a/services/relai.html
+++ b/services/relai.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Relai — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/relai.html","description":"Relai, founded in 2020 in Zürich, Switzerland, is an app designed for beginners to buy and save Bitcoin easily. It stands out from competitors with its non-cus…","about":{"@type":"Organization","name":"Relai","url":"https://relai.app"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/relai.html#webpage","name":"Relai — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/relai.html","inLanguage":"en","description":"Relai, founded in 2020 in Zürich, Switzerland, is an app designed for beginners to buy and save Bitcoin easily. It stands out from competitors with its non-cus…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/relai.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/relai.html#service","name":"Relai","url":"https://relai.app","mainEntityOfPage":"https://buoybitcoin.com/services/relai.html#webpage","provider":{"@type":"Organization","name":"Relai","url":"https://relai.app"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Buy Bitcoin","item":"https://buoybitcoin.com/buy-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Relai","item":"https://buoybitcoin.com/services/relai.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -276,9 +277,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Relai, founded in 2020 in Zürich, Switzerland, is an app designed for beginners to buy and save Bitcoin easily. It stands out from competitors with its non-custodial wallet, meaning users control thei...</p>
-        <p class="desktop-preview">Relai, founded in 2020 in Zürich, Switzerland, is an app designed for beginners to buy and save Bitcoin easily. It stands out from competitors with its non-custodial wallet, meaning users control their Bitcoin via a 12-word seed phrase. After purchasing Bitcoin, it will be directly sent to your wallet.\n\nRelai offers purchases starting at €50 | 54,205 sats, one free buy up to €100 | 108,409 sats monthly, until you hit €1200. After that you pay a 1% fee for any transaction. For businesses and wealthy individuals Relai offers personal service and expert guidance.\n\nIts app, rated 4.5 stars on iOS, is praised by users for simple onboarding and smooth navigation, though some users report verification delays or high card fees. Relai focuses on privacy and self-custody, with optional KYC for small transactions.\n\nIts vision is to make Bitcoin saving accessible across Europe, with plans to add Lightning Network support for faster payments. Beginners love its straightforward design and security, but it’s limited to Europe and lacks advanced savings features.</p>
+        <p class="desktop-preview">Relai, founded in 2020 in Zürich, Switzerland, is an app designed for beginners to buy and save Bitcoin easily. It stands out from competitors with its non-custodial wallet, meaning users control their Bitcoin via a 12-word seed phrase. After purchasing Bitcoin, it will be directly sent to your wallet.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Relai, founded in 2020 in Zürich, Switzerland, is an app designed for beginners to buy and save Bitcoin easily. It stands out from competitors with its non-custodial wallet, meaning users control their Bitcoin via a 12-word seed phrase. After purchasing Bitcoin, it will be directly sent to your wallet.\n\nRelai offers purchases starting at €50 | 54,205 sats, one free buy up to €100 | 108,409 sats monthly, until you hit €1200. After that you pay a 1% fee for any transaction. For businesses and wealthy individuals Relai offers personal service and expert guidance.\n\nIts app, rated 4.5 stars on iOS, is praised by users for simple onboarding and smooth navigation, though some users report verification delays or high card fees. Relai focuses on privacy and self-custody, with optional KYC for small transactions.\n\nIts vision is to make Bitcoin saving accessible across Europe, with plans to add Lightning Network support for faster payments. Beginners love its straightforward design and security, but it’s limited to Europe and lacks advanced savings features.</p></div>
+      <div class="description-full" style="display:none"><p>Relai, founded in 2020 in Zürich, Switzerland, is an app designed for beginners to buy and save Bitcoin easily. It stands out from competitors with its non-custodial wallet, meaning users control their Bitcoin via a 12-word seed phrase. After purchasing Bitcoin, it will be directly sent to your wallet.</p><p>Relai offers purchases starting at €50 | 54,205 sats, one free buy up to €100 | 108,409 sats monthly, until you hit €1200. After that you pay a 1% fee for any transaction. For businesses and wealthy individuals Relai offers personal service and expert guidance.</p><p>Its app, rated 4.5 stars on iOS, is praised by users for simple onboarding and smooth navigation, though some users report verification delays or high card fees. Relai focuses on privacy and self-custody, with optional KYC for small transactions.</p><p>Its vision is to make Bitcoin saving accessible across Europe, with plans to add Lightning Network support for faster payments. Beginners love its straightforward design and security, but it&#039;s limited to Europe and lacks advanced savings features.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -324,6 +325,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Relai?</summary>
+  <div><p>Relai is a beginner‑friendly Bitcoin app with a built‑in self‑custodial wallet and automatic withdrawals to your address.</p></div>
+</details>
+
+<details>
+  <summary>Does Relai support recurring buys?</summary>
+  <div><p>Yes. Recurring buys are supported with free tiers up to monthly limits; fees apply above that.</p></div>
+</details>
+
+<details>
+  <summary>Where is Relai available?</summary>
+  <div><p>Relai primarily serves Europe and supports SEPA, cards and mobile pay methods.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Relai?","acceptedAnswer":{"@type":"Answer","text":"Relai is a beginner‑friendly Bitcoin app with a built‑in self‑custodial wallet and automatic withdrawals to your address."}},{"@type":"Question","name":"Does Relai support recurring buys?","acceptedAnswer":{"@type":"Answer","text":"Yes. Recurring buys are supported with free tiers up to monthly limits; fees apply above that."}},{"@type":"Question","name":"Where is Relai available?","acceptedAnswer":{"@type":"Answer","text":"Relai primarily serves Europe and supports SEPA, cards and mobile pay methods."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -418,7 +441,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Relai","itemListElement":[{"@type":"Service","name":"Bitonic","url":"/services/bitonic.html","position":1},{"@type":"Service","name":"Bull Bitcoin","url":"/services/bull-bitcoin.html","position":2},{"@type":"Service","name":"Hodlhodl","url":"/services/hodlhodl.html","position":3},{"@type":"Service","name":"Peach","url":"/services/peach.html","position":4},{"@type":"Service","name":"Pocket","url":"/services/pocket.html","position":5},{"@type":"Service","name":"River","url":"/services/river.html","position":6},{"@type":"Service","name":"Strike","url":"/services/strike.html","position":7},{"@type":"Service","name":"Swan","url":"/services/swan.html","position":8}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Relai","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bitonic.html#service","name":"Bitonic","url":"https://buoybitcoin.com/services/bitonic.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bull-bitcoin.html#service","name":"Bull Bitcoin","url":"https://buoybitcoin.com/services/bull-bitcoin.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/hodlhodl.html#service","name":"Hodlhodl","url":"https://buoybitcoin.com/services/hodlhodl.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/peach.html#service","name":"Peach","url":"https://buoybitcoin.com/services/peach.html"}},{"@type":"ListItem","position":5,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/pocket.html#service","name":"Pocket","url":"https://buoybitcoin.com/services/pocket.html"}},{"@type":"ListItem","position":6,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/river.html#service","name":"River","url":"https://buoybitcoin.com/services/river.html"}},{"@type":"ListItem","position":7,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/strike.html#service","name":"Strike","url":"https://buoybitcoin.com/services/strike.html"}},{"@type":"ListItem","position":8,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/swan.html#service","name":"Swan","url":"https://buoybitcoin.com/services/swan.html"}}]}</script>
 <script>
 (function(){
   try {
