--- a/services/sparrow.html
+++ b/services/sparrow.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Sparrow — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/sparrow.html","description":"Sparrow Wallet is a desktop Bitcoin wallet designed to give users full control over their bitcoin. It was created by developer Craig Raw and is open-source, pr…","about":{"@type":"Organization","name":"Sparrow","url":"https://sparrowwallet.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/sparrow.html#webpage","name":"Sparrow — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/sparrow.html","inLanguage":"en","description":"Sparrow Wallet is a desktop Bitcoin wallet designed to give users full control over their bitcoin. It was created by developer Craig Raw and is open-source, pr…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/sparrow.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/sparrow.html#service","name":"Sparrow","url":"https://sparrowwallet.com","mainEntityOfPage":"https://buoybitcoin.com/services/sparrow.html#webpage","provider":{"@type":"Organization","name":"Sparrow","url":"https://sparrowwallet.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Store it safely","item":"https://buoybitcoin.com/store-it-safely.html"},{"@type":"ListItem","position":3,"name":"Sparrow","item":"https://buoybitcoin.com/services/sparrow.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -271,9 +272,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Sparrow Wallet is a desktop Bitcoin wallet designed to give users full control over their bitcoin. It was created by developer Craig Raw and is open-source, privacy-focused, and ideal for both beginne...</p>
-        <p class="desktop-preview">Sparrow Wallet is a desktop Bitcoin wallet designed to give users full control over their bitcoin. It was created by developer Craig Raw and is open-source, privacy-focused, and ideal for both beginners and advanced users. The wallet works on Windows, macOS, and Linux.\n\nWhat separates Sparrow from other wallets is its balance between simplicity and advanced features. Beginners can start with a basic hot wallet setup and gradually explore more complex features like hardware wallet integration, multisig vaults, and UTXO control—all within the same interface. It gives users direct visibility into how Bitcoin works, showing transaction details, input and output flows, and allowing for precise control over fees and coin selection. This level of transparency helps users understand and manage their funds more deliberately.\n\nUser reviews highlight how Sparrow scales with you as you learn. It is refered to as the most powerful and versatile Bitcoin wallet, and users praise its clean layout, customizable setup, and educational value. Despite its many features, the app’s interface is considered clear and organized once users get past the initial learning curve.\n\nSparrow’s vision is to offer users complete sovereignty over their bitcoin. It avoids mobile compromises and instead focuses on a desktop experience that can integrate with cold storage, your own node, and advanced privacy tools. For beginners who want to grow into more advanced use cases without switching wallets, Sparrow offers a flexible and educational path to full control.</p>
+        <p class="desktop-preview">Sparrow Wallet is a desktop Bitcoin wallet designed to give users full control over their bitcoin. It was created by developer Craig Raw and is open-source, privacy-focused, and ideal for both beginners and advanced users. The wallet works on Windows, macOS, and Linux.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Sparrow Wallet is a desktop Bitcoin wallet designed to give users full control over their bitcoin. It was created by developer Craig Raw and is open-source, privacy-focused, and ideal for both beginners and advanced users. The wallet works on Windows, macOS, and Linux.\n\nWhat separates Sparrow from other wallets is its balance between simplicity and advanced features. Beginners can start with a basic hot wallet setup and gradually explore more complex features like hardware wallet integration, multisig vaults, and UTXO control—all within the same interface. It gives users direct visibility into how Bitcoin works, showing transaction details, input and output flows, and allowing for precise control over fees and coin selection. This level of transparency helps users understand and manage their funds more deliberately.\n\nUser reviews highlight how Sparrow scales with you as you learn. It is refered to as the most powerful and versatile Bitcoin wallet, and users praise its clean layout, customizable setup, and educational value. Despite its many features, the app’s interface is considered clear and organized once users get past the initial learning curve.\n\nSparrow’s vision is to offer users complete sovereignty over their bitcoin. It avoids mobile compromises and instead focuses on a desktop experience that can integrate with cold storage, your own node, and advanced privacy tools. For beginners who want to grow into more advanced use cases without switching wallets, Sparrow offers a flexible and educational path to full control.</p></div>
+      <div class="description-full" style="display:none"><p>Sparrow Wallet is a desktop Bitcoin wallet designed to give users full control over their bitcoin. It was created by developer Craig Raw and is open-source, privacy-focused, and ideal for both beginners and advanced users. The wallet works on Windows, macOS, and Linux.</p><p>What separates Sparrow from other wallets is its balance between simplicity and advanced features. Beginners can start with a basic hot wallet setup and gradually explore more complex features like hardware wallet integration, multisig vaults, and UTXO control—all within the same interface. It gives users direct visibility into how Bitcoin works, showing transaction details, input and output flows, and allowing for precise control over fees and coin selection. This level of transparency helps users understand and manage their funds more deliberately.</p><p>User reviews highlight how Sparrow scales with you as you learn. It is refered to as the most powerful and versatile Bitcoin wallet, and users praise its clean layout, customizable setup, and educational value. Despite its many features, the app&#039;s interface is considered clear and organized once users get past the initial learning curve.</p><p>Sparrow&#039;s vision is to offer users complete sovereignty over their bitcoin. It avoids mobile compromises and instead focuses on a desktop experience that can integrate with cold storage, your own node, and advanced privacy tools. For beginners who want to grow into more advanced use cases without switching wallets, Sparrow offers a flexible and educational path to full control.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -319,6 +320,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Sparrow Wallet?</summary>
+  <div><p>Sparrow is a powerful non‑custodial desktop wallet with advanced coin control and hardware wallet support.</p></div>
+</details>
+
+<details>
+  <summary>Does Sparrow support my own node?</summary>
+  <div><p>Yes. Sparrow connects to Bitcoin Core or your own Electrum server, including over Tor.</p></div>
+</details>
+
+<details>
+  <summary>Is Sparrow open source?</summary>
+  <div><p>Yes. Sparrow is open‑source and actively maintained.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Sparrow Wallet?","acceptedAnswer":{"@type":"Answer","text":"Sparrow is a powerful non‑custodial desktop wallet with advanced coin control and hardware wallet support."}},{"@type":"Question","name":"Does Sparrow support my own node?","acceptedAnswer":{"@type":"Answer","text":"Yes. Sparrow connects to Bitcoin Core or your own Electrum server, including over Tor."}},{"@type":"Question","name":"Is Sparrow open source?","acceptedAnswer":{"@type":"Answer","text":"Yes. Sparrow is open‑source and actively maintained."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -377,7 +400,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Sparrow","itemListElement":[{"@type":"Service","name":"AnchorWatch","url":"/services/anchorwatch.html","position":1},{"@type":"Service","name":"Bitkey","url":"/services/bitkey.html","position":2},{"@type":"Service","name":"Unchained","url":"/services/unchained.html","position":3},{"@type":"Service","name":"Wasabi","url":"/services/wasabi.html","position":4}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Sparrow","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/anchorwatch.html#service","name":"AnchorWatch","url":"https://buoybitcoin.com/services/anchorwatch.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bitkey.html#service","name":"Bitkey","url":"https://buoybitcoin.com/services/bitkey.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/unchained.html#service","name":"Unchained","url":"https://buoybitcoin.com/services/unchained.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/wasabi.html#service","name":"Wasabi","url":"https://buoybitcoin.com/services/wasabi.html"}}]}</script>
 <script>
 (function(){
   try {
