--- a/services/start9.html
+++ b/services/start9.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Start9 — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/start9.html","description":"Start9 (Start9 Labs) is the creator of the Embassy—a turnkey, self-hosted personal server and Bitcoin stack powered by their open-source StartOS. Their mission…","about":{"@type":"Organization","name":"Start9","url":"https://start9.com"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/start9.html#webpage","name":"Start9 — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/start9.html","inLanguage":"en","description":"Start9 (Start9 Labs) is the creator of the Embassy—a turnkey, self-hosted personal server and Bitcoin stack powered by their open-source StartOS. Their mission…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/start9.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/start9.html#service","name":"Start9","url":"https://start9.com","mainEntityOfPage":"https://buoybitcoin.com/services/start9.html#webpage","provider":{"@type":"Organization","name":"Start9","url":"https://start9.com"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Run my own node","item":"https://buoybitcoin.com/run-my-own-node.html"},{"@type":"ListItem","position":3,"name":"Start9","item":"https://buoybitcoin.com/services/start9.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -221,9 +222,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Start9 (Start9 Labs) is the creator of the Embassy—a turnkey, self-hosted personal server and Bitcoin stack powered by their open-source StartOS. Their mission is to eliminate reliance on centralized ...</p>
-        <p class="desktop-preview">Start9 (Start9 Labs) is the creator of the Embassy—a turnkey, self-hosted personal server and Bitcoin stack powered by their open-source StartOS. Their mission is to eliminate reliance on centralized third parties, placing privacy, decentralization, and individual autonomy at the forefront. Unlike other DIY solutions, Start9 aims to &quot;level the playing field,&quot; offering plug-and-play hardware kits (like Embassy One and Embassy Pro) or a do-it-yourself image for Raspberry Pi or x86, all fully supported by their first-class community and expert support team.\n\nStart9’s target users are privacy-conscious individuals, Bitcoiners, and anyone seeking digital autonomy without sacrificing usability. They prioritize delivering polished self-sovereign computing with high-quality hardware, intuitive interfaces, and expert support (via Matrix) to onboard less technical users while remaining fully transparent and open-source. Users appreciate its robust foundation, modular update system (allowing single-service patching), backup ease, and strong headless health checking—compared to alternatives like Umbrel.\n\nLooking forward, Start9 envisions a world where personal servers become the backbone of a sovereign internet and smart homes, enabling blockchain-native apps, decentralized messaging, password managers, file storage, and more. Their open hardware and software philosophy ensures that even if the company disappears, the ecosystem lives on—fully community-driven and censorship-resistant.</p>
+        <p class="desktop-preview">Start9 (Start9 Labs) is the creator of the Embassy—a turnkey, self-hosted personal server and Bitcoin stack powered by their open-source StartOS. Their mission is to eliminate reliance on centralized third parties, placing privacy, decentralization, and individual autonomy at the forefront. Unlike other DIY solutions, Start9 aims to &quot;level the playing field,&quot; offering plug-and-play hardware kits (like Embassy One and Embassy Pro) or a do-it-yourself image for Raspberry Pi or x86, all fully supported by their first-class community and expert support team.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Start9 (Start9 Labs) is the creator of the Embassy—a turnkey, self-hosted personal server and Bitcoin stack powered by their open-source StartOS. Their mission is to eliminate reliance on centralized third parties, placing privacy, decentralization, and individual autonomy at the forefront. Unlike other DIY solutions, Start9 aims to &quot;level the playing field,&quot; offering plug-and-play hardware kits (like Embassy One and Embassy Pro) or a do-it-yourself image for Raspberry Pi or x86, all fully supported by their first-class community and expert support team.\n\nStart9’s target users are privacy-conscious individuals, Bitcoiners, and anyone seeking digital autonomy without sacrificing usability. They prioritize delivering polished self-sovereign computing with high-quality hardware, intuitive interfaces, and expert support (via Matrix) to onboard less technical users while remaining fully transparent and open-source. Users appreciate its robust foundation, modular update system (allowing single-service patching), backup ease, and strong headless health checking—compared to alternatives like Umbrel.\n\nLooking forward, Start9 envisions a world where personal servers become the backbone of a sovereign internet and smart homes, enabling blockchain-native apps, decentralized messaging, password managers, file storage, and more. Their open hardware and software philosophy ensures that even if the company disappears, the ecosystem lives on—fully community-driven and censorship-resistant.</p></div>
+      <div class="description-full" style="display:none"><p>Start9 (Start9 Labs) is the creator of the Embassy—a turnkey, self-hosted personal server and Bitcoin stack powered by their open-source StartOS. Their mission is to eliminate reliance on centralized third parties, placing privacy, decentralization, and individual autonomy at the forefront. Unlike other DIY solutions, Start9 aims to &quot;level the playing field,&quot; offering plug-and-play hardware kits (like Embassy One and Embassy Pro) or a do-it-yourself image for Raspberry Pi or x86, all fully supported by their first-class community and expert support team.</p><p>Start9&#039;s target users are privacy-conscious individuals, Bitcoiners, and anyone seeking digital autonomy without sacrificing usability. They prioritize delivering polished self-sovereign computing with high-quality hardware, intuitive interfaces, and expert support (via Matrix) to onboard less technical users while remaining fully transparent and open-source. Users appreciate its robust foundation, modular update system (allowing single-service patching), backup ease, and strong headless health checking—compared to alternatives like Umbrel.</p><p>Looking forward, Start9 envisions a world where personal servers become the backbone of a sovereign internet and smart homes, enabling blockchain-native apps, decentralized messaging, password managers, file storage, and more. Their open hardware and software philosophy ensures that even if the company disappears, the ecosystem lives on—fully community-driven and censorship-resistant.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -271,6 +272,28 @@
 <!-- BUILD:END -->
 
 
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Start9?</summary>
+  <div><p>Start9 offers StartOS and plug‑and‑play personal servers (Server One/Pure) to self‑host Bitcoin, Lightning and many apps.</p></div>
+</details>
+
+<details>
+  <summary>Is Start9 open source?</summary>
+  <div><p>StartOS is source‑available; many bundled apps are open‑source.</p></div>
+</details>
+
+<details>
+  <summary>Which hardware should I choose?</summary>
+  <div><p>Use Server One/Pure for turnkey support, or install StartOS on your own x86/Raspberry Pi for DIY control.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Start9?","acceptedAnswer":{"@type":"Answer","text":"Start9 offers StartOS and plug‑and‑play personal servers (Server One/Pure) to self‑host Bitcoin, Lightning and many apps."}},{"@type":"Question","name":"Is Start9 open source?","acceptedAnswer":{"@type":"Answer","text":"StartOS is source‑available; many bundled apps are open‑source."}},{"@type":"Question","name":"Which hardware should I choose?","acceptedAnswer":{"@type":"Answer","text":"Use Server One/Pure for turnkey support, or install StartOS on your own x86/Raspberry Pi for DIY control."}}]}</script>
+
+
 <!-- Rating Modal -->
 <div id="rating-modal" class="rating-modal">
   <div class="rating-content">
@@ -309,7 +332,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Start9","itemListElement":[{"@type":"Service","name":"myNode","url":"/services/mynode.html","position":1},{"@type":"Service","name":"Umbrel","url":"/services/umbrel.html","position":2}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Start9","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/mynode.html#service","name":"myNode","url":"https://buoybitcoin.com/services/mynode.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/umbrel.html#service","name":"Umbrel","url":"https://buoybitcoin.com/services/umbrel.html"}}]}</script>
 <script>
 (function(){
   try {
