--- a/services/wasabi.html
+++ b/services/wasabi.html
@@ -43,7 +43,8 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Wasabi — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/wasabi.html","description":"Wasabi Wallet is a privacy-focused, open-source, non‑custodial Bitcoin desktop wallet launched by zkSNACKs. It routes all traffic through Tor and uses compact…","about":{"@type":"Organization","name":"Wasabi","url":"https://wasabiwallet.io"}}</script></head>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/wasabi.html#webpage","name":"Wasabi — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/wasabi.html","inLanguage":"en","description":"Wasabi Wallet is a privacy-focused, open-source, non‑custodial Bitcoin desktop wallet launched by zkSNACKs. It routes all traffic through Tor and uses compact…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/wasabi.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/wasabi.html#service","name":"Wasabi","url":"https://wasabiwallet.io","mainEntityOfPage":"https://buoybitcoin.com/services/wasabi.html#webpage","provider":{"@type":"Organization","name":"Wasabi","url":"https://wasabiwallet.io"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Store it safely","item":"https://buoybitcoin.com/store-it-safely.html"},{"@type":"ListItem","position":3,"name":"Wasabi","item":"https://buoybitcoin.com/services/wasabi.html"}]}</script></head>
 <body>
   <div class="container">
  <header>
@@ -271,9 +272,9 @@
     <div class="collapsible-description">
       <div class="description-preview">
         <p class="mobile-preview">Wasabi Wallet is a privacy-focused, open-source, non‑custodial Bitcoin desktop wallet launched by zkSNACKs. It routes all traffic through Tor and uses compact blockchain filters, keeping your IP and b...</p>
-        <p class="desktop-preview">Wasabi Wallet is a privacy-focused, open-source, non‑custodial Bitcoin desktop wallet launched by zkSNACKs. It routes all traffic through Tor and uses compact blockchain filters, keeping your IP and balance private. Its standout feature is built-in CoinJoin, a process that mixes your Bitcoin with others’ to make it harder for anyone to trace your transactions, enhancing privacy without relying on third parties.\n\nThe user interface is straightforward but functional, with a dashboard showing your balance, privacy progress, and transaction history, though it may feel technical for complete beginners. Setup involves writing down a 12-word seed phrase and an optional passphrase, which adds security but requires careful storage.\n\nWhat sets Wasabi apart is its strong focus on privacy through CoinJoin, which is seamlessly integrated and doesn’t require manual setup, making it accessible for newcomers. It also allows advanced users to connect to custom coordinators via platforms like Nostr, ensuring privacy even if default services are unavailable.\n\nWasabi is for people who want to own their Bitcoin without having to trust big companies. It hides your transactions by mixing them with others, runs silently in the background over Tor, and gives you full control—all on your own computer. Its goal is to make privacy easy and powerful, while building toward a future where you don’t rely on any single server.</p>
+        <p class="desktop-preview">Wasabi Wallet is a privacy-focused, open-source, non‑custodial Bitcoin desktop wallet launched by zkSNACKs. It routes all traffic through Tor and uses compact blockchain filters, keeping your IP and balance private. Its standout feature is built-in CoinJoin, a process that mixes your Bitcoin with others&#039; to make it harder for anyone to trace your transactions, enhancing privacy without relying on third parties.</p>
       </div>
-      <div class="description-full" style="display:none"><p>Wasabi Wallet is a privacy-focused, open-source, non‑custodial Bitcoin desktop wallet launched by zkSNACKs. It routes all traffic through Tor and uses compact blockchain filters, keeping your IP and balance private. Its standout feature is built-in CoinJoin, a process that mixes your Bitcoin with others’ to make it harder for anyone to trace your transactions, enhancing privacy without relying on third parties.\n\nThe user interface is straightforward but functional, with a dashboard showing your balance, privacy progress, and transaction history, though it may feel technical for complete beginners. Setup involves writing down a 12-word seed phrase and an optional passphrase, which adds security but requires careful storage.\n\nWhat sets Wasabi apart is its strong focus on privacy through CoinJoin, which is seamlessly integrated and doesn’t require manual setup, making it accessible for newcomers. It also allows advanced users to connect to custom coordinators via platforms like Nostr, ensuring privacy even if default services are unavailable.\n\nWasabi is for people who want to own their Bitcoin without having to trust big companies. It hides your transactions by mixing them with others, runs silently in the background over Tor, and gives you full control—all on your own computer. Its goal is to make privacy easy and powerful, while building toward a future where you don’t rely on any single server.</p></div>
+      <div class="description-full" style="display:none"><p>Wasabi Wallet is a privacy-focused, open-source, non‑custodial Bitcoin desktop wallet launched by zkSNACKs. It routes all traffic through Tor and uses compact blockchain filters, keeping your IP and balance private. Its standout feature is built-in CoinJoin, a process that mixes your Bitcoin with others&#039; to make it harder for anyone to trace your transactions, enhancing privacy without relying on third parties.</p><p>The user interface is straightforward but functional, with a dashboard showing your balance, privacy progress, and transaction history, though it may feel technical for complete beginners. Setup involves writing down a 12-word seed phrase and an optional passphrase, which adds security but requires careful storage.</p><p>What sets Wasabi apart is its strong focus on privacy through CoinJoin, which is seamlessly integrated and doesn&#039;t require manual setup, making it accessible for newcomers. It also allows advanced users to connect to custom coordinators via platforms like Nostr, ensuring privacy even if default services are unavailable.</p><p>Wasabi is for people who want to own their Bitcoin without having to trust big companies. It hides your transactions by mixing them with others, runs silently in the background over Tor, and gives you full control—all on your own computer. Its goal is to make privacy easy and powerful, while building toward a future where you don&#039;t rely on any single server.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
         <span class="expand-icon"><span class="arrow-down">↓</span></span>
@@ -319,6 +320,28 @@
   </div>
 </div>
 <!-- BUILD:END -->
+
+
+
+<section class="brand-faq" aria-labelledby="faq-heading">
+  <h2 id="faq-heading">FAQs</h2>
+  <div class="faq-list">
+<details>
+  <summary>What is Wasabi Wallet?</summary>
+  <div><p>Wasabi is an open‑source, non‑custodial desktop wallet focused on privacy with built‑in CoinJoin.</p></div>
+</details>
+
+<details>
+  <summary>Does Wasabi work over Tor?</summary>
+  <div><p>Yes. Wasabi routes traffic over Tor and uses compact filters to protect your IP and balance privacy.</p></div>
+</details>
+
+<details>
+  <summary>Is Wasabi beginner‑friendly?</summary>
+  <div><p>Wasabi offers a clear interface, but privacy features like CoinJoin may require learning for new users.</p></div>
+</details></div>
+</section>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is Wasabi Wallet?","acceptedAnswer":{"@type":"Answer","text":"Wasabi is an open‑source, non‑custodial desktop wallet focused on privacy with built‑in CoinJoin."}},{"@type":"Question","name":"Does Wasabi work over Tor?","acceptedAnswer":{"@type":"Answer","text":"Yes. Wasabi routes traffic over Tor and uses compact filters to protect your IP and balance privacy."}},{"@type":"Question","name":"Is Wasabi beginner‑friendly?","acceptedAnswer":{"@type":"Answer","text":"Wasabi offers a clear interface, but privacy features like CoinJoin may require learning for new users."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -377,7 +400,7 @@
         </div>
       </li></ul>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Wasabi","itemListElement":[{"@type":"Service","name":"AnchorWatch","url":"/services/anchorwatch.html","position":1},{"@type":"Service","name":"Bitkey","url":"/services/bitkey.html","position":2},{"@type":"Service","name":"Sparrow","url":"/services/sparrow.html","position":3},{"@type":"Service","name":"Unchained","url":"/services/unchained.html","position":4}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Alternatives to Wasabi","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/anchorwatch.html#service","name":"AnchorWatch","url":"https://buoybitcoin.com/services/anchorwatch.html"}},{"@type":"ListItem","position":2,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/bitkey.html#service","name":"Bitkey","url":"https://buoybitcoin.com/services/bitkey.html"}},{"@type":"ListItem","position":3,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/sparrow.html#service","name":"Sparrow","url":"https://buoybitcoin.com/services/sparrow.html"}},{"@type":"ListItem","position":4,"item":{"@type":"Service","@id":"https://buoybitcoin.com/services/unchained.html#service","name":"Unchained","url":"https://buoybitcoin.com/services/unchained.html"}}]}</script>
 <script>
 (function(){
   try {
